Examiner comments Please enter the commit message for your changes. Lines starting

--- a/index/00-abstract.Rmd
+++ b/index/00-abstract.Rmd
@@ -11,7 +11,7 @@ Following on from these findings, a pilot patient study was initiated to develop
 
 Given the known relationship between BMI and markers of chronic inflammation relevant to platelet function, I explored the effect of the chemokines macrophage-derived chemokine (MDC) and thymus and activation-regulated chemokine (TARC) on platelet function and signalling (**Chapter \@ref(chemokine-platelets)**). MDC and TARC were able to potentiate platelet activation. Two sample MR provided causal estimates for the effect of higher circulating levels of MDC and TARC on disease. This analysis provided evidence that higher levels of MDC may contribute to venous thromboembolism.
 
-The effect of BMI on overall circulating protein profile was explored in efforts to determine the relevance for platelet function and related disease (**Chapter \@ref(BMI-protein-MR)**). This analysis was conducted on INTERVAL participants with proteomics measured by SomaLogic (N=2737). Here, observational and MR analyses were implemented to obtain causal estimates. Higher BMI was linked to effects on levels of proteins involved in appetite regulation, inflammation and sex hormones. Proteins which were most affect by BMI were enriched for genes involved in cardiovascular disease.
+The effect of BMI on overall circulating protein profile was explored in efforts to determine the relevance for platelet function and related disease (**Chapter \@ref(BMI-protein-MR)**). This analysis was conducted on INTERVAL participants with proteomics measured by SomaLogic (N=2737). Here, observational and MR analyses were implemented to obtain causal estimates. Higher BMI was linked to effects on levels of proteins involved in appetite regulation, inflammation and sex hormones. Proteins which were most affected by BMI were enriched for genes involved in cardiovascular disease.
 
 A weight loss randomized control trial (RCT) called DiRECT was also implemented to evaluate the effect of BMI on the plasma proteome (N=146) (**Chapter \@ref(BMI-protein-RCT)**). Participants had their BMI and plasma proteome measured by SomaLogic at baseline and after one year of Type 2 Diabetes guideline care (control) or a total diet replacement (TDR) (intervention). Linear regression was used to explore effects as well as an instrumental variable analysis, using the treatment group as an instrument for BMI change. A reduction in BMI had a broad effect on the plasma proteome: proteomic changes were enriched for metabolic disease.
 
