--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -32,10 +32,10 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 # Introduction {#background}
 
 ## The history of body mass index
-Although body fatness (adiposity) has long been associated with adverse health, the use of the term body mass index (BMI), is relatively recent. BMI is thought to have been first defined in 1972 by Ancel Keys[@Blackburn2014]. This term was given to define the ratio of weight in kilograms over the square of the height in metres. This measure was found to reflect overall body fatness well, while being easy and cheap to measure. The World Health Organization first defined the BMI categories in 1995[@WHO1995] used today: the National Health Service (NHS) defines a body mass index (BMI) of 25 kg/m^2^ as having overweight and 30 kg/m^2^ or higher as having obesity. These bounds were chosen based on associations with mortality. The average BMI of the UK adult population is ~27kg/m^2^[@Wade2018], which is in the 'overweight' category. Overweight is also more common than 'normal-weight' in many other higher-income countries[@NCD-RisC2016], and prevalence of overweight is increasing in lower-income countries[@Templin2019]. It is currently estimated that 40% of adults in the United States have obesity, with 26% of the population from the United Kingdom having obesity[@Bluher2019]. As of 2016, the number of individuals globally with obesity surpassed 650 million[@TheLancetPublicHealth2018]. 
+Although body fatness (adiposity) has long been associated with adverse health, the use of the term body mass index (BMI), is relatively recent. BMI is thought to have been first defined in 1972 by Ancel Keys[@Blackburn2014]. This term was given to define the ratio of weight in kilograms over the square of the height in metres. This measure was found to reflect overall body fatness well, while being easy and cheap to measure. The World Health Organization first defined the BMI categories [@WHO1995] used today in 1995: the National Health Service (NHS) defines a body mass index (BMI) of 25 kg/m^2^ as having overweight and 30 kg/m^2^ or higher as having obesity. These bounds were chosen based on associations with mortality. The average BMI of the UK adult population is ~27kg/m^2^[@Wade2018], which is in the 'overweight' category. Overweight is also more common than 'normal-weight' in many other higher-income countries[@NCD-RisC2016], and prevalence of overweight is increasing in lower-income countries[@Templin2019]. It is currently estimated that 40% of adults in the United States have obesity, with 26% of the population from the United Kingdom having obesity[@Bluher2019]. As of 2016, the number of individuals globally with obesity surpassed 650 million[@TheLancetPublicHealth2018]. 
 
 ## Cardiovascular disease (CVD) is the leading cause of deaths worldwide {#CVD-stats}
-Diseases affecting the heart and blood vessels are the major cause of mortality in many countries[@BritishHeartFoundation2021]. In 2019, global deaths from coronary heart disease (CHD) and stroke amounted to ~9 million and ~6.5 million deaths, respectively[@BritishHeartFoundation2021]. Current known risk factors for cardiovascular diseases include smoking, a sedentary lifestyle, poor diet and high cholesterol[@Virani2021]. Overweight and obesity are also well established risk factors for such diseases. Obesity leads the years lived with disability and injury risk factors in the United States[@Virani2021]. Various studies have found a link between adiposity and cardiovascular risk through various study designs. For example, large observational studies have found that adults with overweight or obesity have a higher risk of cardiovascular events and death from cardiovascular disease[@Khan2018]. Another study found that an average increase in BMI of 4 kg/m^2^ across a population increased the odds of ischaemic heart disease by 20-30%[@Nordestgaard2012]. 
+Diseases affecting the heart and blood vessels are the major cause of mortality in many countries[@BritishHeartFoundation2021]. In 2019, global deaths from coronary heart disease (CHD) and stroke amounted to ~9 million and ~6.5 million deaths, respectively[@BritishHeartFoundation2021]. Current known risk factors for cardiovascular diseases include smoking, a sedentary lifestyle, poor diet and high cholesterol[@Virani2021]. Overweight and obesity are also well established risk factors for such diseases. Obesity leads the years lived with disability and injury risk factors in the United States[@Virani2021]. Studies have found a link between adiposity and cardiovascular risk through a range of study designs. For example, large observational studies have found that adults with overweight or obesity have a higher risk of cardiovascular events and death from cardiovascular disease[@Khan2018]. Another study found that an average increase in BMI of 4 kg/m^2^ across a population increased the odds of ischaemic heart disease by 20-30%[@Nordestgaard2012]. 
 
 ## Mendelian randomisation can be used to explore causality
 Risk factors have often been identified through observational associations. Observational studies are often limited by bias, confounding and reverse causation[@Davies2018]. Mendelian randomisation (MR) is a technique which exploits the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. There are two main types of MR that can performed: one-sample MR and two-sample MR. One-sample MR is used where the exposure and outcome are measured in the same sample, whereas in two-sample MR the SNP-exposure and SNP-outcome estimates are derived from separate populations[@Zheng2019a]. MR can be likened to a natural randomised controlled trial (RCT)[@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants[@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-CVevent), using BMI and cardiovascular events as an example[@Doney2009]. Here, genotypes that are associated with BMI can be used. These genotypes should only be associated with BMI and not other confounding factors. If people with genotypes which are associated with higher BMI also have higher rates of cardiovascular events, it is likely that the relationship between BMI and cardiovascular events is causal. Although a useful technique in exploring causality, MR has its own biases and limitations, therefore other lines of evidence and study designs such as RCTs are required. In an RCT, if a weight loss intervention reduces BMI compared to the control group, and also reduces the rate of cardiovascular events, this also supports a causal role of BMI in the onset of cardiovascular events. The RCT is considered gold standard in understanding causality, however these trials are expensive and take a long time due to the time needed to follow up participants.
@@ -68,7 +68,7 @@ include_graphics(path = "figure/Intro_background/Thrombosis_venous_arterial.jpg"
 Studies which have used MR to estimate a causal effect have indicated that BMI may have an even greater effect on IHD than observational studies suggested. Nordestgaard et al. utilised single nucleotide polymorphisms (SNPs) which are associated with BMI to estimate that 4kg/m^2^ higher BMI increases the odds of IHD by as much as 52%[@Nordestgaard2012]. Other studies which have used more specific measures of adiposity, such as waist hip ratio adjusted for BMI (WHRadjBMI), have also found evidence for a causal effect of adiposity on coronary heart disease risk[@Dale2017]. Further, higher BMI has been shown to have a causal relationship with more specific measures of cardiovascular events such as ischaemic stroke[@Harshfield2021]. A separate line of evidence for a causal effect of BMI on cardiovascular outcomes is that more weight loss after bariatric surgery reduces the occurrence of major adverse cardiovascular events (MACE)[@Jimenez2021]. A meta-analysis of bariatric surgery on cardiovascular outcomes also found that bariatric surgery reduces myocardial infarction and stroke compared with non-surgical controls[@vanVeldhuisen2022]. Despite evidence for causal relationships, changes which occur as a result of BMI which lead to these cardiovascular events are unclear.
 
 ## How does higher BMI cause increased risk of CHD?
-There is extensive evidence that higher BMI causes hypertension and T2D, which contribute to the increased risk of a heart attack or a stroke. As well as this, studies which have explored the molecular footprint of adiposity have tended to focus on the lipidome, such as cholesterol and triglycerides in lipoprotein subtypes, including low-density lipoproteins (LDL), very-low-density lipoproteins (VLDL) and high-density lipoproteins (HDL)[@Bell2018a; @Wurtz2014], where a higher BMI is associated with an increase in LDLs and a decrease in large HDLs. This has been explored in a causal framework. LDLs are therefore an important example of circulating molecules which are causally related to both BMI and disease risk. Although LDLs are important in mediating the increased risk of CHD[@Lu2014], this does not account for all the risk. Therefore, it is likely that there are other factors which circulate that are mediating this association. There are thousands of detectable proteins which circulate in the blood[@Sun2018], which have a range of roles from inflammation to coagulation. It is likely that adiposity causes an alteration in such proteins, which may have a downstream effect on platelet function and cardiovascular risk. Assessing the overall protein profile of adiposity may provide more of a mechanistic insight into how adiposity causes disease and identify druggable targets.
+There is extensive evidence that higher BMI causes hypertension and type 2 diabetes (T2D), which contribute to the increased risk of a heart attack or a stroke. As well as this, studies which have explored the molecular footprint of adiposity have tended to focus on the lipidome, such as cholesterol and triglycerides in lipoprotein subtypes, including low-density lipoproteins (LDL), very-low-density lipoproteins (VLDL) and high-density lipoproteins (HDL)[@Bell2018a; @Wurtz2014], where a higher BMI is associated with an increase in LDLs and a decrease in large HDLs. This has been explored in a causal framework. LDLs are therefore an important example of circulating molecules which are causally related to both BMI and disease risk. Although LDLs are important in mediating the increased risk of CHD[@Lu2014], this does not account for all the risk. Therefore, it is likely that there are other factors which circulate that are mediating this association. There are thousands of detectable proteins which circulate in the blood[@Sun2018], which have a range of roles from inflammation to coagulation. It is likely that adiposity causes an alteration in such proteins, which may have a downstream effect on platelet function and cardiovascular risk. Assessing the overall protein profile of adiposity may provide more of a mechanistic insight into how adiposity causes disease and identify druggable targets.
 
 ## Platelets are key cells in thrombosis
 Platelets are anucleate cells which are generated from megakaryocytes in the bone marrow. Platelets are one of the key cells involved in haemostasis[@Rivera2009]. Under normal conditions, the endothelium releases nitric oxide (NO) and prostaglandin I2 (PGI2) which suppress platelet activation[@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V (GPIb-IX-V) receptor and the glycoprotein VI (GPVI) collagen receptor. As a result, platelets secrete alpha and dense granules and undergo shape change[@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines[@Gear2003], whereas dense granules release molecules such as adenosine diphosphate (ADP), which further activate platelets by interacting with the P2Y~1~ and P2Y~12~ platelet receptors. Integrins are heterodimeric transmembrane glycoprotein complexes, which are important in platelet activation[@Durrant2017a]. One of the main integrins for platelet activation is integrin α~IIb~β~3~[@Huang2019], of which there are 50,000-100,000 integrins per resting platelet. Under resting conditions, integrin α~IIb~β~3~ adopts a low affinity state. Binding of agonists such as thrombin (or the synthetic peptide agonist PAR1-AP/TRAP-6) to the protease-activated receptor 1 (PAR1) results in activation of integrin α~IIb~β~3~. This is known as inside-out signalling. Here, inositol trisphosphate (IP3) and diacylglycerol are generated, which leads to an increase in cytosolic calcium (Ca^2+^). This in turn activates CALDAG-GEF1 as well as protein kinase C (PKC)[@Mehrbod2013]. The small GTPase, Rap1 is then activated which recruits proteins such as talin and kindlin[@Durrant2017]. This leads to a change in conformation to increase the affinity of integrin α~IIb~β~3~ for its ligand, fibrinogen[@Huang2019]. Neighbouring platelets then become activated due to the release of local mediators such as ADP and thromboxane A~2~ (TxA~2~, which acts at the TP receptor)[@Offermanns2006]. Subsequent fibrinogen binding results in cross-linking of activated platelets (platelet aggregation) via integrin α~IIb~β~3~, resulting in the cessation of bleeding[@Rivera2009]. These key platelet agonists and receptors are shown in Figure \@ref(fig:platelet-activation-receptors). Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis following plaque rupture. This can cause a myocardial infarction and stroke.
@@ -125,7 +125,7 @@ Platelets express receptors for various circulating molecules. Previous studies 
 It is not fully understood whether a high BMI leads to a change in platelet function, and if it does, what mechanisms are involved. Inflammatory mediators could be one such mechanism due to likely interactions between inflammatory mediators and platelets in the blood. Obesity commonly presents with a state of low-grade chronic inflammation. There are two types of fat: white adipose tissue (WAT) and brown adipose tissue (BAT). WAT secretes proteins and peptides which have pro-inflammatory effects[@Cercato2019; @Kern2001]. There is evidence that obesity is associated with increases in interleukin-6 (IL-6), tumour necrosis factor-α (TNF-α), therefore supporting a pro-inflammatory state[@Esser2014]. Previous studies have also identified a causal link between higher BMI and higher circulating levels of the inflammatory molecule C-reactive protein (CRP)[@Timpson2011] and leptin[@Zaghlool2021], further suggesting these effects are BMI driven. More recent studies have used MR and have found an effect of BMI on a range of cytokines[@Kalaoja2021]. As platelet activation can be modified by inflammatory mediators and there is evidence for a causal relationship between BMI and CRP/cytokines, it is likely that inflammation could mediate this effect.
 
 ## The role of circulating platelet primers and disease
-Recent studies have used large cohorts of people to identify SNPs which are associated with changes in levels of certain proteins. These are known as protein Quantitative Trait Loci (pQTL)[@Sun2018]. Sun et al. identified 1,927 genetic associations with 1,478 proteins. As a result of these pQTLs, there have been numerous studies that have been able to estimate causal effects of proteins in disease by using two sample MR. For a two sample MR, the exposure are measured in a separate cohort from the cohort of the outcome. An example of this is linking the interleukin-6 receptor (IL6R) to diseases such as rheumatoid arthritis and coronary artery disease[@Bretherick2020]. The chemokines MDC and TARC both have SNPs which are associated with their levels[@Sun2018]. MDC and TARC have been implicated in platelet hyperactivity, however it is unknown whether raised levels of MDC and TARC would have clinical implications such as a role in ischaemic heart disease. As a polymorphism in the receptor for MDC and TARC (CCR4 receptor) has been implicated in myocardial infarction[@Noori2018], it is important to see how raised levels of MDC and TARC would relate to CVD outcomes. 
+Recent studies have used large cohorts of people to identify SNPs which are associated with changes in levels of certain proteins. These are known as protein quantitative trait loci (pQTL)[@Sun2018]. Sun et al. identified 1,927 genetic associations with 1,478 proteins. As a result of these pQTLs, there have been numerous studies that have been able to estimate causal effects of proteins in disease by using two sample MR. For a two sample MR, the exposure are measured in a separate cohort from the cohort of the outcome. An example of this is linking the interleukin-6 receptor (IL6R) to diseases such as rheumatoid arthritis and coronary artery disease[@Bretherick2020]. The chemokines MDC and TARC both have SNPs which are associated with their levels[@Sun2018]. MDC and TARC have been implicated in platelet hyperactivity, however it is unknown whether raised levels of MDC and TARC would have clinical implications such as a role in ischaemic heart disease. As a polymorphism in the receptor for MDC and TARC (CCR4 receptor) has been implicated in myocardial infarction[@Noori2018], it is important to see how raised levels of MDC and TARC would relate to CVD outcomes. 
 
 ## Evaluating the circulating proteome may reveal mechanistic insight into obesity-related diseases
 Through literature searches, there is evidence for an association between BMI and chemokines such as MDC and TARC[@Kitahara2014]. Based on these observations, there may be many more circulating proteins which may be raised in obesity and have downstream effects on platelet function. Many studies so far have had hypothesis driven approaches when looking at the effect of BMI on circulating protein levels[@Timpson2011]. This is due to the often limited range of the number of proteins detected in laboratory assays, such as enzyme-linked immunosorbent assays (ELISAs). Recent technologies have now been developed which allow protein detection in unprecedented scope and detail, for example the SOMAscan by SomaLogic[@Gold2012]. This array can detect around 4000 unique proteins using SOMAmers (Slow Off-rate Modified Aptamers), that are specific for individual proteins and allow quantification using a DNA microarray. Studies that have attempted to characterise the plasma proteome of higher BMI have often only been in an observational framework[@Cominetti2018]. As the majority of druggable targets are proteins, it is valuable to explore the effects of BMI on circulating plasma proteins. It is estimated that 25% of proteins in the human proteome circulate in the blood[@Imming2006], including enzymes, cytokines and transport proteins. Therefore, focusing on effects of adiposity on the circulating proteome may allow for the development of or repurposing of therapeutic interventions to reduce obesity-related disease. To explore the link between BMI, circulating proteins and platelet function, the blood is the tissue of interest. Many studies have blood/plasma/serum samples analysed from participants, therefore enabling exploration of a range of blood measures.
@@ -147,14 +147,14 @@ The specific sub-aims of the thesis are:
 (ref:scaption-Thesis-schematic) Schematic of the multi-step pathway addressed in the thesis
 
 ```{r Thesis-schematic, echo = FALSE, fig.cap="(ref:caption-Thesis-schematic)", fig.align = "center", fig.scap="(ref:scaption-Thesis-schematic)"}
-include_graphics(path = "figure/Intro_background/Thesis_graphic_overview_without_chapters.png", dpi = NA)
+include_graphics(path = "figure/Intro_background/Thesis_graphic_overview_without_chapters_extra_arrows.png", dpi = NA)
 ```
 
 ## Thesis structure
 To address the thesis aims, there will be six results chapters in this thesis:
 
 1) Using observational and MR frameworks to determine the effect of body mass index on platelet characteristics (Chapter \@ref(BMI-platelets-INTERVAL))
-2) The effect of obesity on platelet function: a clinical pilot study (Chapter \@ref(BMI-platelets-clinic))
+2) The effect of obesity on platelet function: a clinical study (Chapter \@ref(BMI-platelets-clinic))
 3) Pathways linking plasma proteins and platelet function: do the chemokines MDC and TARC play a role? (Chapter \@ref(chemokine-platelets))
 4) Exploring the plasma proteome as a link between adiposity and platelet function: Observational and Mendelian randomisation estimates (Chapter \@ref(BMI-protein-MR))
 5) Further elucidating the effect of adiposity on the plasma proteome using a weight loss intervention (Chapter \@ref(BMI-protein-RCT))
