--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -46,7 +46,7 @@ In this chapter the aim was to use data from the INTERVAL prospective cohort (N=
 (ref:scaption-BMI-platelet-overview) Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits.
 
 ```{r BMI-platelet-overview, echo = FALSE , fig.align = "center", fig.scap="(ref:scaption-BMI-platelet-overview)", fig.cap="(ref:caption-BMI-platelet-overview)", out.width="80%"}
-include_graphics(path = "figure/BMI_platelets/Thesis_graphic_overview_BMI_platelets.png", dpi = NA)
+include_graphics(path = "figure/BMI_platelets/Thesis_graphic_overview_BMI_platelets_arrows.png", dpi = NA)
 ```
 
 (ref:caption-Linear-reg-MR) **Schematic of linear regression and Mendelian randomisation analyses. Linear regression assesses the association between BMI (exposure) and platelet traits (outcome), with adjustment for potential confounders.** Under the assumptions of Mendelian randomisation (MR), the genetic risk score (GRS) for body mass index (BMI) does not associate with confounding variables, and if there is a causal association, the GRS should only associate with platelet outcomes through its association with body mass index.
@@ -67,11 +67,11 @@ Participants completed online questionnaires wherein they reported their height 
 
 ### Genetic data and instrument for BMI
 
-The Affymetrix GeneTitan Multi-Channel (MC) Instrument was used to genotype participants using the UK Biobank Axiom Array (ThermoFisher Scientific, Loughborough, UK). The quality control (QC) of the genetic data has been described in full by Astle et al.[@Astle2016]. The panel used to impute missing genetic data was the 1000 genomes phase-3-UK-10K[@Astle2016]. Genetic variants that were deemed as primary signals from a recent meta-analysis of GWAS for BMI (654 at p<5x10^-8^) were used to make a genetic risk score (GRS). The meta-analysis was conducted on around 700,000 participants of European descent, 250,000 of which were from the Genetic Investigation of ANthromopetric Traits (GIANT) consortium[@Locke2015] and 450,000 from the UK Biobank. This GRS was created using PLINK 2.0[@Purcell2007a], where the effect alleles and betas were obtained from the source GWAS. The score for each participant was calculated by 1) multiplying the number of BMI-increasing SNPs by the beta coefficient of each genetic variant, 2) calculating the sum for all genetic variants, 3) dividing this sum by the number of participants (N). This GRS can be interpreted as the average effect that one SNP has on BMI.
+The Affymetrix GeneTitan Multi-Channel (MC) Instrument was used to genotype participants using the UK Biobank Axiom Array (ThermoFisher Scientific, Loughborough, UK). The quality control (QC) of the genetic data has been described in full by Astle et al.[@Astle2016]. The panel used to impute missing genetic data was the 1000 genomes phase-3-UK-10K[@Astle2016]. Genetic variants that were deemed as primary signals from a recent meta-analysis of GWAS for BMI (654 at p<5x10^-8^) were used to make a genetic risk score (GRS). The meta-analysis was conducted on around 700,000 participants of European descent, 250,000 of which were from the Genetic Investigation of ANthromopetric Traits (GIANT) consortium[@Locke2015] and 450,000 from the UK Biobank. This GRS was created using PLINK 2.0[@Purcell2007a], where the effect alleles and betas were obtained from the source GWAS. The score for each participant was calculated by 1) multiplying the number of BMI-increasing SNPs by the beta coefficient of each genetic variant, 2) calculating the sum for all genetic variants, 3) dividing this sum by the number of SNPs used. This GRS can be interpreted as the average effect that one SNP has on BMI.
 
 ### Study population
 
-The present study was conducted on up to 33388 European ancestry INTERVAL participants living in the United Kingdom. These were the participants who had genetic data, had basic phenotype data and full blood count measures (Figure \@ref(fig:INTERVAL-STROBE)).
+The present study was conducted on up to 33388 European ancestry INTERVAL participants living in the United Kingdom. These were the participants who had genetic data, basic phenotype data and full blood count measures (Figure \@ref(fig:INTERVAL-STROBE)).
 
 (ref:caption-INTERVAL-STROBE) **A STROBE diagram outlining participants included in the INTERVAL study for BMI and platelet trait analyses**.
 
@@ -82,7 +82,7 @@ include_graphics(path = "figure/BMI_platelets/STROBE_diagram.pdf", dpi = NA)
 ```
 
 ### Measurement of platelet traits
-Blood was taken by venipuncture into 3mL ethylenediamine tetraacetic acid (EDTA) tubes. Platelet parameters were measured using the Sysmex XN-1000 instrument[@Astle2016]. This analyzer provides information on cell counts by using a combination of fluorescence (PLT-F) and impedance (I) flow cytometry. The PLT-F channel used a Fluorocell fluorescent dye (oxazine), whereas the impedance method uses electrical resistance to detect platelets. Platelet indices included in the current study, along with the raw units, are provided in Table \@ref(tab:Platelet-traits). These measurements were pre-adjusted for technical covariates such as time between venipuncture and blood count, as well as instrument drift, seasonal and weekly variation[@Astle2016]. Adjustment was performed with cyclic, thin-plate and P-splines in a generalized additive model (GAM)[@Akbari2020]. Resulting platelet trait values along with their units of measurement are reported in Table \@ref(tab:Platelet-traits). These data were rank normal transformed to normalize the distribution of each trait. Therefore, each platelet index is measured in normalized standard deviation (SD) units.
+Blood was taken by venipuncture into 3mL ethylenediamine tetraacetic acid (EDTA) tubes. Platelet parameters were measured using the Sysmex XN-1000 instrument[@Astle2016]. This analyzer provides information on cell counts by using a combination of fluorescence (PLT-F) and impedance (I) flow cytometry. The PLT-F channel used a Fluorocell fluorescent dye (oxazine), whereas the impedance method uses electrical resistance to detect platelets. Platelet indices included in the current study, along with the raw units, are provided in Table \@ref(tab:Platelet-traits). Some measurements are measured by the Sysmex analyzer, whereas some measurements are derived from other platelet variables[@Astle2016]. Details of how each platelet trait is measured or derived is indicated in Table \@ref(tab:Platelet-traits). These measurements were pre-adjusted for technical covariates such as time between venipuncture and blood count, as well as instrument drift, seasonal and weekly variation[@Astle2016]. Adjustment was performed with cyclic, thin-plate and P-splines in a generalized additive model (GAM)[@Akbari2020]. Resulting platelet trait values along with their units of measurement are reported in Table \@ref(tab:Platelet-traits). These data were rank normal transformed to normalize the distribution of each trait. Therefore, each platelet index is measured in normalized standard deviation (SD) units.
 
 (ref:caption-Platelet-traits) **Platelet traits measured by Sysmex XN-1000**.
 
@@ -92,7 +92,7 @@ Blood was taken by venipuncture into 3mL ethylenediamine tetraacetic acid (EDTA)
 # options(knitr.kable.NA = "")
 Name = c('P-LCR','H-IPF','PLT (F)','PLT (I)','PCT','PDW','IPC','IPF','MPV','SFL','FSC','SSC')
 FullName = c('Platelet large cell ratio','High fluorescence immature platelet fraction','Platelet count (PLT-F channel)','Platelet count (impedance channel)','Plateletcrit','Platelet distribution width' ,'Immature platelet count' ,'Immature platelet fraction','Mean platelet volume','Side fluorescence', 'Forward scatter','Side scatter')
-Deriv = c('(platelet number with volume>12 fL)/(platelet number of ordinary volume)  x 100', '(high fluorescence immature platelet number)/(platelet count)  x 100','Total number of platelets per litre','Total number of platelets per litre','Volume percentage of blood occupied by platelets','Standard deviation of platelet volume distribution, estimated as width at 20% modal height of platelet volume histogram','Immature platelet count','(Immature platelet number)/(platelet count)   x 100', 'Mean platelet volume','Side fluorescence measures the nucleic acid (mRNA) content of the platelet','Forward scatter is a measure of the size of the platelet' ,'Side scatter is a measure of the granularity of the platelet')
+Deriv = c('(platelet number with volume>12 fL)/(platelet number of ordinary volume)  x 100', '(high fluorescence immature platelet number)/(platelet count)  x 100','Total number of platelets per litre','Total number of platelets per litre','Volume percentage of blood occupied by platelets','Standard deviation of platelet volume distribution, estimated as width at 20% modal height of platelet volume histogram','Immature platelet count','(Immature platelet number)/(platelet count)   x 100', 'Plateletcrit/Platelet count','Side fluorescence measures the nucleic acid (mRNA) content of the platelet','Forward scatter is a measure of the size of the platelet' ,'Side scatter is a measure of the granularity of the platelet')
 
 Units <- c('%','%','10E9/L','10E9/L','%','fL','10E9/L','%','fL','RFUs','RFUs','RFUs')
 MeanSD <- c('36.9 (7.7)','1.3 (1.0)','255 (57)','250 (55)','0.28 (0.06)','14.0 (1.8)','10.1 (5.0)','4.2 (2.5)','11.1 (1.0)','80.3 (5.0)','53.0 (6.4)','37.9 (2.9)')
@@ -101,9 +101,10 @@ colnames(mytable) <- c('Short name',	'Full name',	'Derivation of platelet trait'
 mytable %>% kable(caption = "(ref:caption-Platelet-traits)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-Platelet-traits)") %>%
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
-    kable_styling(font_size = 7) %>%
+    kable_styling(font_size = 6.5) %>%
 column_spec(2, width = "4cm")   %>%
   column_spec(3, width = "6cm")   %>%
+    column_spec(1, width = "3cm")   %>%
   landscape()
 ```
 
@@ -426,7 +427,7 @@ In this chapter data from 33,388 healthy blood donors was used to study the effe
 include_graphics(path = "figure/BMI_platelets/Visual_abstract.pdf", dpi = NA)
 ```
 
-The observational and MR analyses in the current chapter provide evidence for a positive association between BMI and both IPC and SFL. Stratifying by NHS BMI category suggested that this estimate is strongest in the overweight category. As IPC is derived using SFL, the measure of mRNA content, these measures are highly correlated. Whilst few studies have explored the direct association between BMI and immature platelet measures, there is some evidence for increased immature platelets in subjects with metabolic syndrome (MS) and subjects with type II diabetes compared with control subjects[@Vaduganathan2008a; @Mijovic2015a]. In these studies, participants with MS or type II diabetes also had a higher BMI, which could be a possible cause of this increase in immature platelets. Indeed, evidence from our analysis suggests that BMI, independent of metabolic syndrome or type II diabetes, may causally influence IPC and SFL.
+The observational and MR analyses in the current chapter provide evidence for a positive association between BMI and both IPC and SFL. Although the estimate for BMI and IPC would not withstand multiple testing correction, the consistency between the magnitude of estimates across the observational and MR analyses in INTERVAL, along with the magnitude of estimate in COPTIC suggests that this is a true effect. Stratifying by NHS BMI category suggested that this estimate is strongest in the overweight category. As IPC is derived using SFL, the measure of mRNA content, these measures are highly correlated. Whilst few studies have explored the direct association between BMI and immature platelet measures, there is some evidence for increased immature platelets in subjects with metabolic syndrome (MS) and subjects with type II diabetes compared with control subjects[@Vaduganathan2008a; @Mijovic2015a]. In these studies, participants with MS or type II diabetes also had a higher BMI, which could be a possible cause of this increase in immature platelets. Indeed, evidence from our analysis suggests that BMI, independent of metabolic syndrome or type II diabetes, may causally influence IPC and SFL.
 
 As IPC is an indirect measure of platelet production[@Lev2016a], these results suggest that an increased BMI may lead to an increased production of platelets. It has been reported that immature platelets have increased thrombotic potential[@Lev2016a; @Grove2011a] and may be predictive of cardiovascular events[@Ibrahim2014; @Freynhofer2017a], suggesting that an increase in the number of immature platelets may be of functional and clinical relevance. A follow-up analysis confirmed that higher IPC was associated with greater platelet aggregation independent of absolute platelet count within a cardiac surgery cohort. Positive associations were found between IPC and aggregation induced by adrenaline, TRAP-6 and ADP, suggesting general platelet hyperactivity with more immature platelets. A previous study in a coronary artery disease cohort also found a positive correlation between IPC and aggregation induced by arachidonic acid, collagen and ADP[@Grove2011a]. These findings suggest that IPC can be used as a proxy for platelet hyperactivity within a cohort with a history of CVD. Measures of immature platelets are currently not considered in the clinic when prescribing antiplatelet therapy, however if a higher immature platelet count is demonstrative of newly produced, hyperactive platelets then this could be important in guiding dosage regimes to ensure sufficient platelet inhibition[@Bernlochner2015a]. Observational studies have also found that patients with COVID-19 have elevated immature platelet counts and fraction, which could partly explain high rates COVID-19 induced thrombosis[@Cohen2020, @Klok2020]. Despite the association between BMI and IPC, there was less evidence for an effect of BMI on IPF. This lack of association may be because IPF is the proportion of immature platelets, therefore if someone had a higher number of immature platelets, but also a higher number of platelets overall (for example due to increased platelet lifespan), there would be no increase in the immature platelet fraction.
 
