--- a/index/05-chap5.Rmd
+++ b/index/05-chap5.Rmd
@@ -35,14 +35,14 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 
 Platelets likely contribute to the increased CVD risk related to obesity. The previous chapters have indicated that higher BMI may contribute to raising IPC and may affect the platelet proteome. This may have implications for platelet function. Other published work has demonstrated that platelets from patients with obesity are hyperactive and have a lower sensitivity to antiplatelet therapies such as clopidogrel[@Nardin2015]. These therapies are critical in the prevention of ischaemic events in certain circumstances. The underlying mechanisms that cause general platelet hyperactivity in obesity is not completely understood. It is likely to involve a combination of factors. One such factor could be a decrease in the production of endothelial PGI2 and nitrous oxide[@BelindeChantemele2012a]. Another contributing factor could be an alteration in the circulating levels of soluble ligands, growth factors and cytokines as a result of low grade chronic inflammation[@Esser2014]. These proteins may subsequently enhance platelet function (known as platelet priming). Platelet primers are signaling molecules which enhance agonist-induced platelet function but in isolation are unable to activate platelets. Molecules that have been reported to be able to prime platelets include insulin-like growth factor-1 (IGF-1)[@Nardin2015; @Blair2015] and thrombopoietin (TPO)[@Maury2010a].
 
-There are other biomarkers which are also suggested to be raised with obesity as a result of low-grade chronic inflammation[@Esser2014], including the chemokines macrophage-derived chemokine (MDC/CCL22) and thymus and activation regulated chemokine (TARC/CCL17)[@Safa2016]. These inflammatory chemokines act at the receptor CCR4, which is expressed on platelets[@Clemetson2000]. MDC and TARC have been shown to potentiate platelet aggregation[@Gear2001]. For example, the presence of TARC and MDC have been demonstrated to greatly enhance platelet aggregation in the presence of low levels of the platelet agonist ADP[@Gear2001]. Furthermore, gene polymorphisms of MDC and CCR4 are associated with myocardial infarction (MI), therefore implicating MDC in thrombosis pathophysiology[@Noori2018]. Previous studies have shown that multiple platelet primers increase platelet function through activation of the lipid kinase phosphoinositide-3-kinase (PI3K)[@Blair2015; @Pasquet2000; @Falcinelli2005]. Another pathway that has been implicated in platelet priming effects is the mitogen-activated protein kinase (MAPK) pathway. TPO can enhance thromboxane A~2~ (TxA~2~) synthesis through increasing the activation of extracellular signal regulated kinase (ERK2)[@Ezumi1998; @VanWilligen2000]. The common involvement of both PI3K and MAPK pathways in platelet priming mediated by IGF-1, TPO and matrix metalloproteinase-2 (MMP-2) suggests that MDC and TARC could also exert priming effects through these common pathways. 
+There are other biomarkers which are also suggested to be raised with obesity as a result of low-grade chronic inflammation[@Esser2014], including the chemokines macrophage-derived chemokine (MDC/CCL22) and thymus and activation regulated chemokine (TARC/CCL17)[@Safa2016]. These inflammatory chemokines act at the receptor CCR4, which is expressed on platelets[@Clemetson2000]. MDC and TARC have been shown to potentiate platelet aggregation[@Gear2001]. For example, the presence of TARC and MDC have been demonstrated to greatly enhance platelet aggregation in the presence of low levels of the platelet agonist ADP[@Gear2001]. Furthermore, gene polymorphisms of MDC and CCR4 are associated with myocardial infarction (MI), therefore implicating MDC in thrombosis pathophysiology[@Noori2018]. Previous studies have shown that multiple platelet primers increase platelet function through activation of the lipid kinase phosphoinositide-3-kinase (PI3K)[@Blair2015; @Pasquet2000; @Falcinelli2005]. Another pathway that has been implicated in platelet priming effects is the mitogen-activated protein kinase (MAPK) pathway. TPO can enhance thromboxane A~2~ (TxA~2~) synthesis through increasing the activation of extracellular signal regulated kinase (ERK2)[@Ezumi1998; @VanWilligen2000]. The common involvement of both PI3K and MAPK pathways in platelet priming mediated by IGF-1, TPO and matrix metalloproteinase-2 (MMP-2) suggests that MDC and TARC could also exert priming effects through these common pathways.
 
 As blood/plasma levels of MDC have been reported to be elevated in people with obesity[@Safa2016] and polymorphisms of its receptor are associated with MI, understanding the mechanisms by which MDC can enhance platelet function may provide important insight in to how platelets are hyperactive in obesity and potentially provide a novel target for new antiplatelet/thrombotic or preventative therapies for those with an increased risk of cardiovascular events. Furthermore, If MDC and TARC are able to mediate the effect of obesity on platelet function, this may suggest that exploring the effect BMI on the general plasma proteome is required in order to identify other potential protein mediators. The aims of this chapter were therefore to determine the effects and mechanisms of MDC and TARC on platelet function and signalling and explore the effect of increasing levels of MDC and TARC on disease using two sample Mendelian randomisation. Investigation of the effect of BMI on levels of MDC and TARC will be explored in Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT). Figure \@ref(fig:chemokine-platelet-graphic) indicates the parts of the overall thesis hypotheses which are addressed in the current chapter.
 
 (ref:caption-chemokine-platelet-graphic) **Schematic of the associations explored in Chapter \@ref(chemokine-platelets)**. This chapter explores the effect of the chemokines MDC and TARC on platelet function and aims to explore their involvement in disease. Figure made using BioRender.com.
 (ref:scaption-chemokine-platelet-graphic) Schematic of the associations explored in Chapter \@ref(chemokine-platelets)
 ```{r chemokine-platelet-graphic, echo = FALSE , fig.align = "center", fig.scap="(ref:scaption-chemokine-platelet-graphic)", fig.cap="(ref:caption-chemokine-platelet-graphic)", out.width="90%"}
-include_graphics(path = "figure/Chemokines/Thesis_graphic_overview_chemokines.png", dpi = NA)
+include_graphics(path = "figure/Chemokines/Thesis_graphic_overview_chemokines_arrows.png", dpi = NA)
 ```
 
 ## Methods
@@ -69,7 +69,7 @@ Washed platelets were used at a concentration of 2 x 10^7^/mL. Platelets were pr
 Washed platelets were diluted to a concentration of 1 x 10^8^/mL. Platelets were left to rest in a 96 well plate for 2 minutes to warm to 37 °C. 200 ng/ml MDC, 200 ng/mL TARC, 10 µM ADP or vehicle were preincubated with platelets for 5 mins at 37 °C. PGE1 (concentration-response curve) was added for a further 5 minutes. Platelets were fixed with 1 % PFA for 10 minutes. Platelets were centrifuged in a 96 well plate at 2651 RPM for 10 minutes (Heraeus Megafuge with M-20 Microplate Swinging Bucket Rotor, ThermoFisher Scientific). Supernatant was then discarded, and platelets were permeabilized with 0.1% TritonTM X-100 for 10 minutes. The plate was centrifuged again at 2651 RPM for 10 minutes. Supernatant was discarded and platelets were washed and resuspended in 1 x PBS. Platelets were centrifuged at 2651 RPM for 10 minutes. Supernatant was discarded and platelets were resuspended with rabbit pSer157 VASP primary antibody (1 in 1000) for 30 minutes on ice. Platelets were centrifuged at 2651 RPM for 10 minutes. Supernatant was discarded and platelets were washed and resuspended with 1 x PBS. Platelets were centrifuged at 2651 RPM for 10 minutes. Supernatant was discarded and platelets were resuspended with secondary antibody (Alexa Fluor™ 647 anti-rabbit IgG, 1 in 1000) for 45 minutes on ice. Platelets were centrifuged at 2651 RPM for 10 minutes. Supernatant was discarded and platelets were washed with 1 x PBS. Platelets were centrifuged once more at 2651 RPM for 10 minutes, resuspended once more in 1 x PBS and the plate was read using a BD Accuri C6 Plus flow cytometer and using the APC-A channel.
 
 ### Western blotting
-Platelets were used at a concentration of 4 x 10^8^/mL. Platelets were preincubated with 200ng/mL MDC, 200ng/mL TARC or vehicle for 5 minutes followed by 5 minutes application of PAR1-AP (all at 30 °C). For phospho-VASP assay, MDC, TARC or ADP were preincubated with platelets for 5 minutes, with PGE1 added for a further 5 minutes. Platelets were lysed with 4 X LDS NuPAGE sample buffer supplemented with 50 mM dithiothreitol (DTT). Samples were stored at -20 °C. Samples were heated to 70 °C for 10 minutes prior to SDS-PAGE. A 10 % Resolving gel was cast for Tris-glycine SDS-polyacrylamide gel electrophoresis, and a 5 % Stacking gel was cast for loading. As a standard, 4 µl Precision Plus protein pre-stained standard was loaded, along with 20 µl of the lysate sample. The samples were placed in a tank containing 4-morpholinepropanesulfonic acid (MOPS) running buffer (50 mm MOPS, 50 mm Tris, 1 mm EDTA, 0.1% SDS, 5 mm sodium bisulfite) and protein electrophoresis was carried out for 90 minutes at 100 V. Following this, proteins were transferred to a poly(vinylidene fluoride) (PDVF) membrane in the presence of transfer buffer (25 mM Tris-HCl (pH 7.6), 192 mM glycine, 20% methanol) for 60 minutes and at 100 V. The membrane was then incubated in LI-COR blocking buffer with 0.1 % TBS-Tween in a 1:1 ratio for 1 hour. Membranes were incubated with the primary antibody (1 in 1000 dilution) at room temperature overnight. Talin was used as a loading control. The membrane was washed 3 times with 0.1 % TBS-Tween for 5 minutes. The membrane was incubated with Fluor680 labelled secondary antibody (1 in 5000 dilution) for 1 hour. The membrane was washed 6 times for 5 minutes, then membranes were scanned using the LI-COR Odyssey® CLx Imaging System. Bands were quantified using Image Studio Lite. 
+Platelets were used at a concentration of 4 x 10^8^/mL. Platelets were preincubated with 200ng/mL MDC, 200ng/mL TARC or vehicle for 5 minutes followed by 5 minutes application of PAR1-AP (all at 30 °C). For phospho-VASP assay, MDC, TARC or ADP were preincubated with platelets for 5 minutes, with PGE1 added for a further 5 minutes. Platelets were lysed with 4 X LDS NuPAGE sample buffer supplemented with 50 mM dithiothreitol (DTT). Samples were stored at -20 °C. Samples were heated to 70 °C for 10 minutes prior to SDS-PAGE. A 10 % resolving gel was cast for Tris-glycine SDS-polyacrylamide gel electrophoresis, and a 5 % stacking gel was cast for loading. As a standard, 4 µl Precision Plus protein pre-stained standard was loaded, along with 20 µl of the lysate sample. The samples were placed in a tank containing 4-morpholinepropanesulfonic acid (MOPS) running buffer (50 mm MOPS, 50 mm Tris, 1 mm EDTA, 0.1% SDS, 5 mm sodium bisulfite) and protein electrophoresis was carried out for 90 minutes at 100 V. Following this, proteins were transferred to a poly(vinylidene fluoride) (PDVF) membrane in the presence of transfer buffer (25 mM Tris-HCl (pH 7.6), 192 mM glycine, 20% methanol) for 60 minutes and at 100 V. The membrane was then incubated in LI-COR blocking buffer with 0.1 % TBS-Tween in a 1:1 ratio for 1 hour. Membranes were incubated with the primary antibody (1 in 1000 dilution) at room temperature overnight. Talin was used as a loading control. The membrane was washed 3 times with 0.1 % TBS-Tween for 5 minutes. The membrane was incubated with Fluor680 labelled secondary antibody (1 in 5000 dilution) for 1 hour. The membrane was washed 6 times for 5 minutes, then membranes were scanned using the LI-COR Odyssey® CLx Imaging System. Bands were quantified using Image Studio Lite. 
 
 ### Calcium mobilisation
 Fura-2 (4 µM) was added to PRP after the addition of indomethacin and apyrase and incubated for 1 hour wrapped in foil at 37 °C. PRP was centrifuged and platelets were resuspended in supplemented HEPES Tyrode’s as described above, with washed platelets (at 4 x 10^8^/mL) protected from the light with foil. Platelets were recalcified with 1 mM calcium chloride using the Tecan Infinite M200 multimode plate reader (Mannedorf, Switzerland). Fluorescence of fura-2 was measured as the ratio at wavelengths 340:380 nm and provided a measurement of free calcium. 10 basal recordings were taken over 1 minute before addition of MDC, TARC or ADP. Upon agonist stimulation, 20 readings were taken over 2 minutes. A final concentration of 1 % Triton X-100 was added to permeabilise platelets and further readings were raken as a reference for maximum calcium mobilisation.
@@ -81,6 +81,26 @@ Data was analysed using GraphPad Prism 8. If data displayed a normal distributio
 Mendelian randomisation is a method which uses genetic variants as instrumental variables to provide a causal estimate of the relationship between a modifiable exposure and health outcome[@Davies2018]. Two sample MR uses summary statistics and allows for causal effects to be estimated where the exposure and outcome are measured in different populations[@Davies2018]. EpigraphDB is a tool which performs two sample MR to determine how the human proteome contributes to complex diseases[@Zheng2020]. Protein quantitative trait loci (pQTLs) were available for MDC and TARC from the INTERVAL study (N=3301), which were rank normal transformed[@Sun2018]. Therefore a systematic exploration of the possible roles of MDC and TARC in disease was performed. These SNPs were associated with these proteins at p<5x10^-8^. GWAS summary statistics that were publically available for disease outcomes were included. A list of the available outcomes are presented on EpigraphDB https://www.epigraphdb.org/pqtl/list/outcomes. As an example, the venous thromboembolism variables were from Neale lab: https://github.com/Nealelab/UK_Biobank_GWAS). The venous thromboembolism (VTE) units are derived from a case/control linear mixed model. For MDC, there was one instrument available, therefore a Wald ratio was used to estimate the causal effect[@Lawlor2008]. There were two instruments available for TARC, therefore the inverse variance weighted (IVW) method was used, which assumes all genetic variants are valid instrumental variables[@Burgess2013]. The pQTLs used were trans pQTLs (located >500 kb from the leading pQTL). The instruments used were categorised as Tier 1 instruments, which passed both pleiotropy and consistency tests[@Zheng2020]. As a total of 225 outcomes were searched, a Bonferroni-adjusted p-value of 0.05/225 = 2.2x10^-4^ was utilised to account for multiple testing.
 
 ## Results
+
+### Effects of MDC and TARC alone on aggregation in washed platelets 
+MDC and TARC were applied to washed platelets to determine whether they exert effects on platelet aggregation in the absence of an agonist. MDC and TARC did not cause platelet aggregation, however they did cause an upward deflection on the aggregation trace (Figure \@ref(fig:MDC-TARC-wp-alone-aggregation)). This upward deflection is a reduction in light passing through the sample, indicating that the platelets may be undergoing shape change.
+
+(ref:scaption8) The effect of the chemokines MDC and TARC alone on aggregation in washed platelets
+(ref:caption8) **The effect of the chemokines MDC and TARC alone on aggregation in washed platelets**. A-C) Washed platelets at 2x10^8^/mL supplemented with  apyrase were stimulated with vehicle, 200ng/mL MDC, 200 ng/mL TARC or 1 uM PAR1-AP (5 mins). Aggregation was measured using light transmission aggregometry. Each graph is a representative trace from a separate donor
+```{r MDC-TARC-wp-alone-aggregation, out.width="100%", echo = FALSE, fig.cap="(ref:caption8)", fig.align = "center", fig.scap= "(ref:scaption8)"}
+include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_alone_wp_aggregation.pdf", dpi = NA)
+
+```
+
+### Effects of MDC and TARC alone on aggregation in PRP
+MDC and TARC were applied on their own in PRP to see whether in the presence of plasma these chemokines could activate platelets. MDC and TARC elicited 38 % (SEM 10 %) and 35 % (SEM 10 %) aggregation respectively. PAR1-AP (1uM) induced 50 % (SEM 14 %) aggregation and 10 uM ADP induced 78 % (SEM 3.5) aggregation.
+
+(ref:scaption-plate-agg-chemokines) The effect of the chemokines MDC and TARC alone on aggregation in platelet rich plasma using plate aggregation
+(ref:caption-plate-agg-chemokines) **The effect of the chemokines MDC and TARC alone on aggregation in platelet rich plasma using plate aggregation**. A-C) PRP supplemented with apyrase was stimulated with 1uM PAR1-AP, 10uM ADP, 200ng/mL MDC, or 200 ng/mL TARC for 5 mins using a plate shaker. Readings were taken with a plate reader. 
+```{r plate-agg-chemokines, out.width="100%", echo = FALSE, fig.cap="(ref:caption-plate-agg-chemokines)", fig.align = "center", fig.scap= "(ref:scaption-plate-agg-chemokines)"}
+include_graphics(path = "figure/Chemokines/PRP_MDC_TARC_plate_agg.png", dpi = NA)
+
+```
 
 ### Priming effects of MDC and TARC on platelet aggregation in washed platelets using light transmission aggregometry
 
@@ -146,17 +166,6 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_PS_exposure_layout.p
 
 ```
 
-### Effects of MDC and TARC alone on aggregation in washed platelets 
-
-MDC and TARC were applied to washed platelets to determine whether they exert effects on platelet aggregation in the absence of an agonist. MDC and TARC did not cause platelet aggregation, however they did cause an upward deflection on the aggregation trace (Figure \@ref(fig:MDC-TARC-wp-alone-aggregation)). This upward deflection is a reduction in light passing through the sample, indicating that the platelets may be undergoing shape change.
-
-(ref:scaption8) The effect of the chemokines MDC and TARC alone on aggregation in washed platelets
-(ref:caption8) **The effect of the chemokines MDC and TARC alone on aggregation in washed platelets**. A-C) Washed platelets at 2x10^8^/mL supplemented with  apyrase were stimulated with vehicle, 200ng/mL MDC, 200 ng/mL TARC or 1 uM PAR1-AP (5 mins). Aggregation was measured using light transmission aggregometry. Each graph is a representative trace from a separate donor
-```{r MDC-TARC-wp-alone-aggregation, out.width="100%", echo = FALSE, fig.cap="(ref:caption8)", fig.align = "center", fig.scap= "(ref:scaption8)"}
-include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_alone_wp_aggregation.pdf", dpi = NA)
-
-```
-
 ### Effects of MDC and TARC alone on calcium mobilisation
 
 Calcium mobilisation was measured by using a fluorescent dye, Fura-2, which binds to intracellular calcium. Increasing concentrations of ADP were added to washed platelets as a positive control, where increasing calcium mobilisation was observed (\@ref(fig:MDC-TARC-wp-calcium)A). MDC and TARC alone were also able to increase calcium mobilisation in a concentration-dependent manner (\@ref(fig:MDC-TARC-wp-calcium)B), however caused a much smaller calcium response than ADP. 
@@ -195,7 +204,6 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_VASP_FACS_logec50.pd
 
 
 ### Mechanisms of the effect of MDC on platelet aggregation in PRP
-
 The mechanism by which these chemokines cause platelet aggregation in PRP was further characterised just using MDC. MDC-induced platelet aggregation was explored using various inhibitors. To test that the antagonists used were specific, they were first applied to PAR1-AP. As expected, the CCR4 antagonist AZD-2098 did not affect PAR1-AP platelet aggregation. The G~q~ inhibitor YM-254890 inhibited PAR1-AP induced platelet aggregation (Figures \@ref(fig:MDC-PRP-agg-bar)A, B). Y27632 inhibited the G~12/13~ mediated shape change induced by low concentrations of PAR1-AP (0.75 uM) due to inhibiting rho-associated protein kinase (ROCK) (data not shown). 
 
 The effects of these inhibitors on MDC-induced aggregation were then explored. MDC by itself was able to consistently cause over 60% aggregation in PRP. The CCR4 inhibitor AZD-2098 was able to reduce this aggregation, but only at 50 uM (Figures \@ref(fig:MDC-PRP-agg-bar)C, \@ref(fig:MDC-PRP-agg-trace)A, B). The G~q~ inhibitor YM-254890 was able to reduce the maximum aggregation induced by MDC (Figure \@ref(fig:MDC-PRP-agg-bar)C, Figure \@ref(fig:MDC-PRP-agg-trace)C), suggesting CCR4 couples to G~q~. Y27632 did not affect aggregation induced by MDC, suggesting that this aggregation is not dependent on G~12/13~ and ROCK (Figure \@ref(fig:MDC-PRP-agg-bar)D, \@ref(fig:MDC-PRP-agg-trace)D). Application of MDC to PRP did not cause shape change.
@@ -220,7 +228,7 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_inhibitors_aggregation_tr
 
 ### Two sample Mendelian randomisation to assess the role of MDC (CCL22) and TARC (CCL17) in disease
 
-To estimate potential causal relationships bewteen circulating levels of MDC and TARC and disease, a two sample MR was performed using pQTL data for these chemokines and available disease outcome data. Results are displayed for estimates where p<0.05, however due to multiple testing, the p-value threshold was adjusted to 2.2x10^-4^. Results are presented as the change in outcome per SD higher protein. There was evidence from the Wald ratio MR that higher MDC had a causal effect on three outcomes: high cholesterol (Effect size = 0.22 SD, SE = 0.02, p=2.2x10^-26^), DVT (Effect size = 0.22, SE 0.021, p=2.2x10^-26^) and pulmonary embolism (Effect size = 0.33, SE 0.08, p=2.0x10^-5^). There was not strong evidence for an effect of higher levels of TARC on any of the included outcomes. Results of the two sample MR are shown for MDC and TARC in tables \@ref(tab:MDC-disease-MR) and \@ref(tab:TARC-disease-MR).
+To estimate potential causal relationships bewteen circulating levels of MDC and TARC and disease, a two sample MR was performed using pQTL data for these chemokines and available disease outcome data. Results are displayed for estimates where p<0.05, however due to multiple testing, the p-value threshold was adjusted to 2.2x10^-4^. Results are presented as the change in outcome per SD higher protein. There was evidence from the Wald ratio MR that higher MDC had a causal effect on three outcomes: high cholesterol (Effect size = 0.22 SD, SE = 0.02, p=2.2x10^-26^), DVT (Effect size = 0.22, SE 0.021, p=2.2x10^-26^) and pulmonary embolism (Effect size = 0.33, SE 0.08, p=2.0x10^-5^). A colocalsation analysis can be used to try to distinguish whether causal effects are arising due to linkage disequilibrium[@Zheng2020]. The association between MDC and self-reported high cholesterol had strong evidence (posterior probability > 0.8) of colocalization[@Zheng2020], suggesting that these two traits share the same causal variant. There was not strong evidence for an effect of higher levels of TARC on any of the included outcomes. Results of the two sample MR are shown for MDC and TARC in tables \@ref(tab:MDC-disease-MR) and \@ref(tab:TARC-disease-MR).
 
 (ref:caption-MDC-disease-MR) Estimates for the effect of MDC on disease outcomes using two sample Mendelian randomisation
 ```{r MDC-disease-MR,  echo=FALSE}
@@ -277,4 +285,4 @@ This chapter has provided evidence for a an effect of MDC and TARC on platelet f
 
 ### Conclusions
 
-Overall, this chapter provided evidence that the chemokines MDC and TARC potentiate platelet aggregation induced by PAR1-AP. On their own in washed platelets, a small calcium response can be observed as well as shape change, but PRP is required to observe full aggregation. Signalling experiments suggest MDC and TARC act at the CCR4 receptor on platelets, and that G~q~ coupling is responsible for the functional effects observed. There was evidence that higher MDC may have a causal effect on DVT and PE. MDC may therefore be a biomarker for venous thromboembolism. Further work is required to determine signalling, and further cohort studies would be useful to confirm effects of MDC on DVT and PE.
+Overall, this chapter provided evidence that the chemokines MDC and TARC potentiate platelet aggregation induced by PAR1-AP. On their own in washed platelets, a small calcium response can be observed as well as shape change, but PRP is required to observe full aggregation. Signalling experiments suggest MDC and TARC act at the CCR4 receptor on platelets, and that G~q~ coupling is responsible for the functional effects observed. There was evidence that higher MDC may have a causal effect on DVT and PE. Further work is required to determine signalling, and further cohort studies would be useful to confirm effects of MDC on DVT and PE.
