--- a/index/06-chap6.Rmd
+++ b/index/06-chap6.Rmd
@@ -46,7 +46,7 @@ In this chapter, the aim was to measure associations between adiposity and the h
 (ref:caption-BMI-protein-graphic-INT) **Schematic of the associations explored in Chapter \@ref(BMI-protein-MR)**. This chapter explores the causal effect of BMI on the plasma proteome and explores whether these changes might contribute to CVD. Figure made using BioRender.com.
 (ref:scaption-BMI-protein-graphic-INT) Schematic of the associations explored in \@ref(BMI-protein-MR).
 ```{r BMI-protein-graphic-INT, echo = FALSE , fig.align = "center", fig.scap="(ref:scaption-BMI-protein-graphic-INT)", fig.cap="(ref:caption-BMI-protein-graphic-INT)", out.width="90%"}
-include_graphics(path = "figure/BMI_protein_INTERVAL/Thesis_graphic_overview_BMI_protein_CVD.png", dpi = NA)
+include_graphics(path = "figure/BMI_protein_INTERVAL/Thesis_graphic_overview_BMI_protein_CVD_arrows.png", dpi = NA)
 ```
 
 ## Methods
@@ -63,7 +63,7 @@ Plasma proteins were measured in INTERVAL participants at baseline (before rando
 
 The population characteristics of INTERVAL participants with SomaLogic data who were included in this study (N range: 2422 to 2737 due to missing data for covariables) were compared to those INTERVAL participants who were not included (N range: 27174 to 30721) to assess generalisability of any BMI-protein associations to the wider INTERVAL sample. Population characteristics evaluated were age, sex, weight, height, BMI, smoking frequency, and alcohol intake. Differences in population characteristics among the two INTERVAL sub-sets were tested by a two-sided t-test for continuous traits and a two-sided Chi-square test for categorical variables. Observational analyses were conducted using linear regression to examine associations between BMI (in normalized standard deviation (SD) units based on a rank normal transformation (rntransform() from "moosefun" package https://github.com/hughesevoanth/moosefun) and each standardised protein trait as a dependent (outcome) variable. Two linear models were used (using lm() function from R "stats" package): 1) adjusted for age and sex and 2) additionally adjusted for smoking and alcohol consumption (each as an ordered categorical variable). Given that the procedure which generates the "pre-adjusted" data (adjustment for covariables before rank normal transformation of proteins) can reintroduce correlations[@Pain2018], age and sex are again used as covariables here. The estimates derived from models 1) and 2) therefore reflect the normalized SD-unit difference in each protein trait per normalized SD-unit (4.8 kg/m^2^) higher BMI. Associations of covariables with BMI and protein traits were also examined using linear regression.
 
-A Shapiro-Wilk test was used to confirm whether the GRS showed a normal distribution. MR analyses were conducted using two-stage least squares (2SLS) regression models with robust standard errors, using the systemfit function as part of the systemfit package[@Henningsen2007], with measured BMI in SD units and the GRS for BMI as the instrumental variable. These MR estimates reflect the normalized SD-unit difference in each protein trait per normalized SD-unit (4.8 kg/m^2^) higher BMI. Estimates are reported from the direct linear associations between BMI and proteins as "observational" estimates and those from the 2SLS causal effect estimates as "MR estimates". Agreement between observational and MR estimates was examined using a separate linear regression. This was performed: 1) for all proteins, and 2) excluding the proteins that fell below the P-value reference point for strong evidence (defined below) to examine whether agreement is limited to "top hits" or applies throughout the effect distribution. Agreement between observational estimates and MR estimates would suggest that there are causal effects of BMI across the general proteome, with differences in estimates suggesting confounding of observational estimates. 
+A Shapiro-Wilk test was used to confirm whether the GRS showed a normal distribution. MR analyses were conducted using two-stage least squares (2SLS) regression models with robust standard errors, using the systemfit function as part of the systemfit package[@Henningsen2007], with measured BMI in SD units and the GRS for BMI as the instrumental variable. These MR estimates reflect the normalized SD-unit difference in each protein trait per normalized SD-unit (4.8 kg/m^2^) higher BMI. Estimates are reported from the direct linear associations between BMI and proteins as "observational" estimates and those from the 2SLS causal effect estimates as "MR estimates". Agreement between observational and MR estimates was examined using a separate linear regression. This was performed: 1) for all proteins, and 2) excluding the proteins that fell below the P-value reference point for strong evidence (P<1.4x10^-5^) to examine whether agreement is limited to "top hits" or applies throughout the effect distribution. Agreement between observational estimates and MR estimates would suggest that there are causal effects of BMI across the general proteome, with differences in estimates suggesting confounding of observational estimates. 
 
 To account for multiple testing, a Bonferroni correction was used to adjust results. This was informed by the correlation between proteins, adjusting only for the estimated number of independent traits (Figure \@ref(fig:Corr-mat-proteins)). Correlation was assessed by a Spearman’s correlation matrix. From a starting number of 4034, the number of independent proteins was  3655 (using a correlation cut-off of r  = 0.8 or tree cut height = 0.2 between proteins, Figure \@ref(fig:Dend-proteins)), dendrogram made using  "iPVs" package https://github.com/hughesevoanth/iPVs). A Bonferroni adjusted P-value of 0.05/3655 = 1.4x10^-5^ was utilised to indicate strong evidence in this sample. Full results are presented in the supplementary material. 
 
@@ -82,6 +82,9 @@ include_graphics(path = "figure/BMI_protein_INTERVAL/dendrogram.pdf", dpi = NA)
 \elandscape
 
 The association between BMI and specific platelet proteins were also explored. Here, GO pathways which include the term "platelet" were selected in AmiGO2 http://amigo.geneontology.org/ (Supplementary Table 1). These pathways were then searched in BioMart https://www.ensembl.org/biomart/martview/afd335dff2c91c86501d3f1f77b8b805, to provide a list of all the proteins involved in these platelet pathways (Supplementary Table 2). Unique proteins in Supplementary Table 2 were searched within the results to extract the estimate for BMI on platelet proteins. As the chemokines MDC and TARC were explored in the previous chapter and displayed an evidence for an effect on platelet function, and MDC was implicated in DVT in an MR framework, the specific effects of BMI on MDC and TARC were looked up.
+
+### Sensitivity analysis
+As a sensitivity analysis, for proteins which had evidence for a BMI effect, a two sample MR was performed using available summary statistics on MRBase[@Hemani2018]. The summary statistics for BMI were obtained from Yengo et al., using the 656 near-independent SNPs associated with BMI in a population of 681275 individuals (the same ones used for the genetic risk score)[@Yengo2018]. Summary statistics for proteins were obtained from the GWAS performed by Sun et al.[@Sun2018], where protein levels were measured in SD units in a total of 3301 participants. A total of 637 of the BMI SNPs were present in the protein summary statistics. The inverse-variance weighted (IVW) method, weighted median and weighted mode MR methods were used to estimate the causal effect using the TwoSampleMR R package[@Burgess2016; @Hemani2018]. The MR Egger method was also used to estimate the causal effect[@Burgess2017]; this methods also tests for directional pleiotropy. Pleiotropy was determined usng the MR Egger intercept and heterogeneity was examined using Cochran's Q statisitc[@Burgess2017; @Greco2015]. Cis protein quantitative trait loci (pQTLs) for each protein were identified[@Sun2018] and any BMI SNPs within ± 1 Mb of these loci were removed.  The two sample MR estimate was recalculated without these BMI SNPs to determine whether effects still remain after removal of SNPs near the genes which encode the proteins and, where possible, the MR estimates for each protein were compared.
 
 ### Enrichment analysis
 To investigate whether any protein groups showed a particularly strong relationship with BMI and disease (signal detection), protein features were clustered for further analysis. First, a principal component analysis (PCA; prcomp() function from the R "stats" package) on the proteins, not the individuals, was performed on the "pre-adjusted" (see above) dataset (Figure \@ref(fig:PCs)A-D). The top "n" PC eigenvectors, as identified by a scree plot of the PCA eigenvalues (Figure \@ref(fig:PCs)E), were carried forward into an unsupervised k-means analysis (kmeans() function from the R "stats" package). Nineteen k-means analyses were run altering the value of k (number of clusters) from two to 20. To identify an appropriate number of protein clusters (k) a scree like plot was generated (Figure \@ref(fig:PCs)F). Here the variance explained by clusters was plotted, for each k, as estimated as the sum of squares explained by clusters (betweenness) over the total sums of squares, and looked for the smallest k with the maximum variance explained (a plateau). In summary, a data reduction method (PCA) was used to identify major axes (PCs) of the protein data that were then utilised in a machine learning clustering algorithm (k-means) to identify clusters of proteins that share abundance similarities across individuals.
@@ -189,7 +192,7 @@ column_spec(1, width = "5cm")   %>%
 
 ### MR estimates of associations between BMI and protein traits
 
-In MR analyses, eight unique BMI-protein associations were detected at the level P<1.4x10^-5^ (multiple testing reference point, Figure \@ref(fig:ObsMRforestplot2)). MR estimates provide an estimate of the causal association between protein (in SDs) per SD higher BMI. The strongest association of BMI was again with leptin (0.63 SD, 95% CI = 0.48-0.79; P=1.6x10^-15^); this was followed by the association with FABP4 (0.65 SD, 95% CI = 0.46-0.83; P=6.7x10^-12^). A strong negative association was also seen between BMI (per SD) and SHBG (-0.45 SD, 95% CI -0.65 to -0.25, P=1.4x10^-5^). Other BMI-protein associations (P<1.4x10^-5^) included positive associations with fumarylacetoacetase (FAAA), inhibin beta C chain and complement C5, and negative associations with receptor-type tyrosine-protein phosphatase delta and PILR alpha-associated neural protein. 
+In MR analyses, eight unique BMI-protein associations were detected at the level P<1.4x10^-5^ (multiple testing reference point, Figure \@ref(fig:ObsMRforestplot2)). MR estimates provide an estimate of the causal association between protein (in SDs) per SD higher BMI. The strongest association of BMI was again with leptin (0.63 SD, 95% CI = 0.48-0.79; P=1.6x10^-15^); this was followed by the association with FABP4 (0.65 SD, 95% CI = 0.46-0.83; P=6.7x10^-12^). A strong negative association was also seen between BMI (per SD) and SHBG (-0.45 SD, 95% CI -0.65 to -0.25, P=1.4x10^-5^). Other BMI-protein associations (P<1.4x10^-5^) included positive associations with fumarylacetoacetase (FAAA), inhibin beta C chain (INHBC) and complement C5, and negative associations with receptor-type tyrosine-protein phosphatase delta (PTPRD) and PILR alpha-associated neural protein (PILR A-A NP). 
 
 (ref:caption-ObsMRforestplot2) **Forest plot of the strongest BMI-protein Mendelian randomisation estimates and the corresponding observational estimates**
 (ref:scaption-ObsMRforestplot2) Forest plot of the strongest BMI-protein Mendelian randomisation estimates and the corresponding observational estimates
@@ -238,6 +241,80 @@ include_graphics(path = "figure/BMI_protein_INTERVAL/unadj_obs_MR_scatter_small.
 ```{r Obs-MR-without-top8, echo = FALSE, out.width = "80%", fig.cap="(ref:caption-Obs-MR-without-top8)", fig.align = "center", fig.scap="(ref:scaption-Obs-MR-without-top8)"}
 include_graphics(path = "figure/BMI_protein_INTERVAL/Obs_MR_scatter_without_top8.pdf", dpi = NA)
 
+```
+
+### Sensitivity analysis of BMI protein MR effects
+Summary statistics from Sun et al. were available for six of the eight proteins determined as showing evidence for a causal relationship with BMI. These were available for FABP4, leptin, FAAA, INHBC, PILR-AA-NP and PTPRD, but not for Complement C5 and SHBG. FAAA, INHBC, Complement C5, SHBG and PILR-AA-NP had pQTLs, but of these only the pQTL for FAAA was within ± 1 Mb of a BMI SNP. A summary of this is provided in Table \@ref(tab:pQTLs).
+
+(ref:caption-pQTLs) **Summary of proteins which have summary statistics available in Sun et al.[@Sun2018], proteins which have cis pQTLs and which pQTLs are within 1 Mb from a BMI SNP**. Any SNPs which need to removed as a sensitivity analysis are highlighted.
+(ref:scaption-pQTLs) Summary of proteins which have summary statistics available in Sun et al.[@Sun2018], proteins which have cis pQTLs and which pQTLs are within 1 Mb from a BMI SNP
+```{r pQTLs,  echo=FALSE}
+options(knitr.kable.NA = "")
+Protein = c("Leptin",'FABP4','FAAA','PTPRD','INHBC','Complement C5','SHBG','PILR-AA-NP')
+Sun <- c('Yes','Yes','Yes','Yes','Yes','No','No','Yes')
+pQTL <- c('No','No','Yes','No','Yes','Yes','Yes','Yes')
+SNP <- c('NA','NA','rs11555096','NA','rs4253282','rs1035029','rs858519','rs11064321')
+Chromosome <- c('NA','NA','15','NA','4','9','17','12')
+Position <- c('NA','NA','80472526','NA','187164399','123742818','7531965','6809896')
+SNP_removed <- c('NA','NA','rs12593036','NA','None','None','None','None')
+mytable = data.frame(cbind(Protein, Sun, pQTL, SNP, Chromosome, Position, SNP_removed))
+colnames(mytable) <- c( 'Protein',	'Present in summary stats by Sun et al.',	'Cis pQTL?	', 'SNP',	'Chromosome',	'Position',	'BMI SNP to be removed')
+mytable %>% kable(caption = "(ref:caption-pQTLs)", booktabs = TRUE, caption.short = "(ref:scaption-pQTLs)") %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+#column_spec(3, width = "3cm")   %>%
+# column_spec(5, width = "3cm")  %>%
+  landscape()
+```
+
+In general, the IVW two-sample MR estimates for BMI and plasma protein levels were similar in direction to the one sample MR estimates and provided evidence for a causal relationship with BMI (Figure \@ref(fig:two-sample-forest)). These estimates, along with the MR-Egger, weighted median and weighted mode estimates, are presented in Table \@ref(tab:Two-sample). There was consistency across MR Egger, IVW, weighted median and weighted mode MR results for all proteins except INHBC, where the weighted mode estimate attenuated to the null. There was weak evidence for heterogeneity with leptin and PTPRD, however there was no evidence for horizontal pleiotropy as the MR Egger intercepts were all close to zero (P>0.05 for the Egger intercept). The single SNP analysis and leave-one-out analysis results are presented in Supplementary Tables 11 and 12. Removing one SNP at a time did not affect the overall IVW estimate for any protein.
+
+(ref:caption-two-sample-forest) **Forest plot of the IVW two sample Mendelian randomisation estimates for the effect of BMI on circulating proteins**. Proteins presented are those that had evidence from the one sample MR that BMI had a causal effect on circulating levels. FABP4 = Fatty acid binding protein 4, FAAA = fumarylacetoacetase, INHBC = inhibin beta C chain, PILR A-A NP = PILR alpha-associated neural protein, PTPRD = Receptor-type tyrosine-protein phosphatase delta.
+
+(ref:scaption-two-sample-forest) Forest plot of the IVW two sample MR estimates for the effect of BMI on circulating proteins
+
+```{r two-sample-forest, echo = FALSE, out.width = "90%", fig.cap="(ref:caption-two-sample-forest)", fig.align = "center", fig.scap="(ref:scaption-two-sample-forest)"}
+include_graphics(path = "figure/BMI_protein_INTERVAL/BMI_proteins_2SMR.pdf", dpi = NA)
+
+```
+
+(ref:caption-Two-sample) **Two sample Mendelian randomisation estimates for the effect of BMI on circulating proteins.** Proteins included had evidence from the one sample MR for a causal effect by BMI and had summary statistics available on MR Base by Sun et al.[@Sun2018]. Results from Cochran's Q test of heterogeneity and  the MR Egger intercept test for horizontal pleiotropy are also included. FABP4 = Fatty acid binding protein 4, FAAA = fumarylacetoacetase, INHBC = Inhibin beta C chain, PILR A-A NP = PILR alpha-associated neural protein, PTPRD = Receptor-type tyrosine-protein phosphatase delta. 
+
+(ref:scaption-Two-sample) Two sample Mendelian randomisation estimates for the effect of BMI on circulating proteins
+
+
+```{r Two-sample,  echo=FALSE}
+options(knitr.kable.NA = "")
+Exposure <- c("BMI", 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI', 'BMI' )
+Outcome <- c('FABP4','FABP4','FABP4','FABP4','FAAA','FAAA','FAAA','FAAA','INHBC','INHBC','INHBC','INHBC','Leptin','Leptin','Leptin','Leptin','PILR A-A NP','PILR A-A NP','PILR A-A NP','PILR A-A NP','PTPRD','PTPRD','PTPRD','PTPRD')
+OutcomeID = c('prot-a-1013', 'prot-a-1013', 'prot-a-1013', 'prot-a-1013','prot-a-1018','prot-a-1018','prot-a-1018','prot-a-1018','prot-a-1556','prot-a-1556','prot-a-1556','prot-a-1556','prot-a-1721','prot-a-1721','prot-a-1721','prot-a-1721','prot-a-2266','prot-a-2266','prot-a-2266','prot-a-2266','prot-a-2443','prot-a-2443','prot-a-2443','prot-a-2443')
+Method = c('MR Egger','Inverse variance weighted','Weighted median','Weighted mode', 'MR Egger','Inverse variance weighted','Weighted median','Weighted mode', 'MR Egger','Inverse variance weighted','Weighted median','Weighted mode', 'MR Egger','Inverse variance weighted','Weighted median','Weighted mode', 'MR Egger','Inverse variance weighted','Weighted median','Weighted mode', 'MR Egger','Inverse variance weighted','Weighted median','Weighted mode')
+N_SNP = c(637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637, 637)
+Beta_coefficient <- c(0.21,0.48,0.36,0.34,0.11,0.32,0.29,0.25,0.15,0.25,0.14,-0.01,0.36,0.43,0.38,0.42,-0.40,-0.23,-0.30,-0.31,-0.59,-0.36,-0.48,-0.56)
+SE <- c(0.17,0.07,0.12,0.18,0.17,0.07,0.12,0.20,0.17,0.07,0.12,0.23,0.18,0.07,0.12,0.20,0.17,0.07,0.12,0.17,0.18,0.07,0.12,0.17)
+Pval <- c('2.19E-01','1.45E-12','3.36E-03','5.81E-02','5.40E-01','3.70E-06','1.47E-02','2.22E-01','3.71E-01','2.21E-04','2.28E-01','9.77E-01','4.47E-02','5.29E-10','1.75E-03','3.22E-02','2.09E-02','1.02E-03','1.00E-02','7.14E-02','8.50E-04','2.29E-07','3.19E-05','1.26E-03')
+Q <- c(649,652,NA,NA,685,687,NA,NA,631,631,NA,NA,703,703,NA,NA,680,682,NA,NA,705,707, NA, NA)
+Q_df <- c(635,636, NA, NA, 635,636, NA, NA, 635,636, NA, NA, 635,636, NA, NA, 635,636, NA, NA, 635,636, NA, NA)
+Q_pval <- c('3.37E-01','3.18E-01',NA,NA,'8.24E-02','7.90E-02',NA,NA,'5.40E-01','5.47E-01',NA,NA,'3.10E-02','3.25E-02',NA,NA,'1.03E-01','1.02E-01',NA,NA,'2.84E-02','2.65E-02', NA, NA)
+Egger_intercept <- c('4.89E-03',NA,NA,NA,'3.89E-03',NA,NA,NA,'1.74E-03',NA,NA,NA,'1.44E-03',NA,NA,NA,'3.23E-03',NA,NA,NA,'4.22E-03',NA,NA,NA)
+SE <- c('2.86E-03',NA,NA,NA,'2.93E-03',NA,NA,NA,'2.82E-03',NA,NA,NA,'2.97E-03',NA,NA,NA,'2.92E-03',NA,NA,NA,'2.98E-03',NA,NA,NA)
+Pval <- c('8.71E-02',NA,NA,NA,'1.85E-01',NA,NA,NA,'5.38E-01',NA,NA,NA,'6.29E-01',NA,NA,NA,'2.70E-01',NA,NA,NA,'1.56E-01',NA,NA,NA)
+mytable = data.frame(cbind(Exposure, Outcome, OutcomeID, Method, N_SNP, Beta_coefficient, SE, Pval, Q, Q_df, Q_pval, Egger_intercept, SE, Pval))
+colnames(mytable) <- c('Exposure',	'Outcome',	'Outcome ID',	'Method',	'N SNP',	'Beta coefficient',	'SE',	'Pval',	'Q',	'Q df',	'Q pval',	'Egger intercept',	'SE',	'Pval')
+mytable %>% kable(caption = "(ref:caption-Two-sample)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-Two-sample)") %>% 
+  kable_classic_2(full_width = F, font_size = 6.7) %>%
+ kable_styling(full_width = TRUE) %>%
+   column_spec(3, width = "2cm")   %>%
+ column_spec(4, width = "2cm")   %>%
+  landscape()
+```
+
+Only the cis pQTL for FAAA was within 1 Mb of a BMI SNP (\@ref(tab:pQTLs)). After removal of the corresponding BMI SNP, the causal effects were re-estimated. Figure \@ref(fig:FAA-forest) displays the comparison of MR estimates for the effect of BMI on FAAA, with and without rs12593036 as an instrument for BMI. There was still no evidence for heterogeneity (Q p-value = 0.08) or horizontal pleiotropy (MR Egger intercept p-value = 0.19). This comparison indicates that tMR estimates are unchanged even if the BMI SNP which is near the gene that encodes FAAA is included in the genetic instrument for BMI.
+
+(ref:caption-FAAA-forest) **Forest plot comparing the MR estimate for the effect of BMI on circulating levels of fumarylacetoacetase, with and without BMI SNPs near the fumarylacetoacetase (FAAA) cis pQTL**. 
+(ref:scaption-FAAA-forest) Forest plot comparing the MR estimate for the effect of BMI on circulating levels of fumarylacetoacetase (FAAA), with and without BMI SNPs near the fumarylacetoacetase cis pQTL
+```{r FAA-forest, echo = FALSE, out.width = "90%", fig.cap="(ref:caption-FAAA-forest)", fig.align = "center", fig.scap="(ref:scaption-FAAA-forest)"}
+include_graphics(path = "figure/BMI_protein_INTERVAL/FAH_comparison.pdf", dpi = NA)
 ```
 
 ### Enrichment analysis of strongest BMI-protein associations
@@ -310,7 +387,7 @@ mytable %>% kable(caption = "(ref:caption-DAVID-enrichment-obs)", booktabs = TRU
 
 ## Discussion
 
-This chapter sought to estimate the effects of adiposity on a comprehensive set of protein traits only recently measurable by untargeted proteomics using observational and MR methods. This analysis was performed as alterations in the plasma proteins may have implications for CVD, and therefore relating to platelet function. Observational results provided evidence for associations between BMI and 1576 proteins and MR was performed to reduce confounding. MR results suggest that BMI alters protein traits involved in regulating appetite, sex hormones, inflammation, and other systems; specific proteins most altered by BMI include leptin, FABP4, and SHBG. Results of follow-up analyses suggest that the cluster of proteins most altered by BMI is enriched for genes associated with cardiovascular and metabolic disease. 
+This chapter sought to estimate the effects of adiposity on a comprehensive set of protein traits only recently measurable by untargeted proteomics using observational and MR methods. This analysis was performed as alterations in the plasma proteins may have implications for CVD, and may therefore have an effect on platelet function. Observational results provided evidence for associations between BMI and 1576 proteins and MR was performed to reduce confounding. MR results suggest that BMI alters protein traits involved in regulating appetite, sex hormones, inflammation, and other systems; specific proteins most altered by BMI include leptin, FABP4, and SHBG. Results of follow-up analyses suggest that the cluster of proteins most altered by BMI is enriched for genes associated with cardiovascular and metabolic disease. 
 
 This chapter explored the effect of BMI on a large set of circulating proteins in an MR framework. Previous studies have used observational epidemiology to explore the effect of obesity on the plasma proteome: one study used mass spectrometry and found an increase in Complement Factors I, B and H and an increase in CRP[@Cominetti2018]. These findings were replicated in the current observational analysis using the SomaLogic platform, indicating that associations are detectable across different proteomic platforms. The only association that did not replicate in the current analysis was the positive association with protein S100-A9. Although the MR analysis did not support some of these BMI-protein associations as being causal based on a P-value reference point, the strong association between the observational and MR estimates throughout the entire effect distribution suggests that disagreements between methods are likely an issue of power given current sample sizes.
 
@@ -324,7 +401,7 @@ There were also a range of platelet proteins which were detected in the plasma (
 
 The involvement of the chemokines MDC and TARC in platelet function was presented in Chapter \@ref(chemokine-platelets), where there was evidence that they can modulate platelet activation. There was also MR evidence that higher levels of MDC could contribute towards VTE pathophysiology. These chemokines were also included in the SomaLogic panel in the current chapter, therefore the effect of BMI on the circulating levels of these chemokines was explored. MDC was associated with BMI observationally, and the magnitude of effect was similar in the MR, however this estimate did not withstand multiple testing adjustment. It is possible that MDC could be an intermediate in between BMI and platelet function, however this analysis needs to be replicated in a larger cohort. There was no evidence to support TARC as an intermediate. Differences in regulation of MDC and TARC need to be further elucidated.
 
-Despite these possible protein involvements in cardiometabolic disease and platelet function, it remains difficult to assess the contribution of individual proteins as they are not entirely independent and any pathological effects would likely be due to a global change in protein composition. There are not distinct groupings in the SomaLogic data as there often are with, for example, metabolomics data. Proteins grouped into clusters of similar features were examined, where the BMI-protein estimates of each cluster with overall estimates were compared and enrichment for genes related to disease were explored. The cluster most altered by BMI (cluster 2) included most of the eight proteins with the strongest BMI effects from MR analyses, as well as various complement factors, chemokines and coagulation factors. Therefore, it is very likely that this global change in proteins would activate platelets. This cluster was also found to be enriched for genes related to CVD, renal and metabolic diseases, and cancer. Enrichment was similar when comparing the proteins that had an observational association with BMI with all proteins included, with enrichment appearing greatest for renal and metabolic disease. Together, this suggests that changes in proteins may mediate effects of obesity on cardiometabolic diseases; more focused investigations of these proteins are now needed, especially to assess their impact on platelet function. 
+Despite these possible protein involvements in cardiometabolic disease and platelet function, it remains difficult to assess the contribution of individual proteins as they are not entirely independent and any pathological effects would likely be due to a global change in protein composition. There are not distinct groupings in the SomaLogic data as there often are with, for example, metabolomics data. Proteins grouped into clusters of similar features were examined, where the BMI-protein estimates of each cluster with overall estimates were compared and enrichment for genes related to disease were explored. The cluster most altered by BMI (cluster 2) included five of the eight proteins with the strongest BMI effects from MR analyses, as well as various complement factors, chemokines and coagulation factors. Therefore, it is very likely that this global change in proteins would activate platelets. This cluster was also found to be enriched for genes related to CVD, renal and metabolic diseases, and cancer. Enrichment was similar when comparing the proteins that had an observational association with BMI with all proteins included, with enrichment appearing greatest for renal and metabolic disease. Together, this suggests that changes in proteins may mediate effects of obesity on cardiometabolic diseases; more focused investigations of these proteins are now needed, especially to assess their impact on platelet function. 
 
 This analysis has some limitations. The limitations that have arisen through use of the INTERVAL study have been discussed in section \@ref(INTERVAL-limitations). One of the limitations specific to the proteomic data in INTERVAL is that although it is one of largest existing cohorts to have untargeted proteomic data based on the SomaLogic platform, the sample size is still relatively modest and may have low power to detect some associations when using MR. Based on the detectable (P<1.4x10^-5^) median absolute observational effect size (0.13 SDs), this analyses had 80% power to detect MR effect sizes >= 0.33 SDs (alpha=0.05) for the sample size (N=2737)[@Brion2013]. With greater statistical power, there would likely be more proteins detected with MR. This was reinforced by the strong agreement in the magnitude of effect estimates seen in observational and MR analyses which applied throughout the effect distribution. Additionally, the proteins examined are highly correlated and therefore changes in individual proteins may not fully be described. Evidence from case-control cohorts as well as functional and animal studies would help isolate individual proteins that are altered and contribute to disease. Finally, although analyses provide insight into the proteomic effects of BMI, it does not distinguish between the type of adiposity. It would be useful to distinguish between the effects of subcutaneous and visceral fat using dual-energy X-ray absorptiometry (DXA) derived measurements, but these were not available in the INTERVAL data set.
 
