--- a/index/07-chap7.Rmd
+++ b/index/07-chap7.Rmd
@@ -38,10 +38,10 @@ Obesity is associated with an increased risk of type II diabetes (T2D), CVD, mus
 
 Although MR helps to overcome issues inherent to observational studies such as confounding and reverse causation, MR has its own limitations. For example, it is possible that genetic variants used for the genetic risk score could affect protein levels through routes other than changes in BMI. This is known as horizonal pleiotropy[@Davies2018]. As well as this, although there were over 2700 participants within the MR, this is a relatively small sample size for the study design. Additionally, it is important to not only look at which proteins are altered within the population with higher BMI; identifying which proteins can be modulated with weight loss is important as this may help reveal mechanistic insight into mechanisms of obesity-related CVD. Triangulation can therefore be used in efforts to further determine the BMI effects on the plasma proteome. Triangulation is defined as strengthening causal inference through the combination of study designs which each have separate sources of bias[@Lawlor2016]. Therefore, to add an independent source of evidence to the MR in the previous chapter, the Diabetes REmission Clinical Trial (DiRECT) can be utilised. The DiRECT trial consisted of a group of patients with overweight/obesity and T2D who were either given guideline T2D care or an acute intervention, consisting of a low calorie diet, to help with weight loss and T2D remission[@Lean2018]. This trial therefore provided a separate opportunity to explore the effect of BMI on the plasma proteome due to the variance in BMI created through a successful weight loss intervention.
 
-(ref:caption-BMI-protein-graphic2) **Schematic of the associations explored in Chapter \@ref(BMI-protein-RCT). This chapter explores the effect of caloric restriction-induced weight loss on the plasma proteome.** Figure made using BioRender.com.
+(ref:caption-BMI-protein-graphic2) **Schematic of the associations explored in Chapter \@ref(BMI-protein-RCT). This chapter explores the effect of BMI change on the plasma proteome.** Figure made using BioRender.com.
 (ref:scaption-BMI-protein-graphic2) Schematic of the associations explored in Chapter \@ref(BMI-protein-RCT)
 ```{r BMI-protein-graphic2, echo = FALSE , fig.align = "center", fig.scap="(ref:scaption-BMI-protein-graphic2)", fig.cap="(ref:caption-BMI-protein-graphic2)", out.width="80%"}
-include_graphics(path = "figure/DiRECT/Thesis_graphic_overview_BMI_protein_CVD.png", dpi = NA)
+include_graphics(path = "figure/DiRECT/Thesis_graphic_overview_BMI_protein_CVD_arrows.png", dpi = NA)
 ```
 
 ## Methods
@@ -212,9 +212,9 @@ include_graphics(path = "figure/DiRECT/string_platelet_activation_network.png", 
 
 ## Discussion
 
-In this chapter, a clinical trial implementing caloric restriction-induced weight loss was utilised as a second line of evidence to assess the effect of BMI on the plasma proteome. This analysis provided evidence for a broad effect of weight loss on the plasma proteome, providing results the effect of caloric restriction on the most extensive set of proteins to date. 
+In this chapter, a clinical trial implementing caloric restriction-induced weight loss was utilised as a second line of evidence to assess the effect of BMI on the plasma proteome. This analysis provided evidence for a broad effect of weight loss on the plasma proteome, providing results the effect of BMI change on the most extensive set of proteins to date. 
 
-The current study identified 144 BMI-related protein changes that were consistent across both models. This includes a reduction in BMI reducing levels of GHR, while increasing levels of apolipoprotein F, SHBG and IGFBP1/2. Table \@ref(tab:weight-loss-protein) provides a summary of findings from the literature from previous studies which have explored the effect of caloric restriction on plasma proteins. As detailed in the table, previous studies have mainly used mass spectrometry. One study used SomaLogic[@Carayol2017], however this panel only included 1129 proteins. The current study utilised over fourfold more proteins, therefore providing more in depth readouts of biological processes. Findings are in concordance with previous studies[@Geyer2016; @Figarska2020; @OllerMoreno2018; @Piening2018; @Carayol2017; @Bruderer2019]. These protein changes replicate across cohorts and proteomic platforms and are more likely to be robust associations. Proteins altered with caloric restriction have been implicated in disease including coronary artery disease and T2D within the same cohort[@Ritchie2019]. A mediation analysis suggested that proteins mediate the risk between a T2D genetic risk score (GRS) and incidence of T2D, such as IGFBP1/2, SHBG and GHR. Looking at individual proteins, a SNP which increases levels of ApoF also increases the risk of myocardial infarction and coronary heart disease[@Liu2021], therefore this apolipoprotein could contribute to the increased risk of thrombotic events seen with a higher BMI.
+The current study identified 144 BMI-related protein changes that were consistent across both models. This includes a reduction in BMI reducing levels of GHR, while increasing levels of apolipoprotein F, SHBG and IGFBP1/2. Table \@ref(tab:weight-loss-protein) provides a summary of findings from the literature from previous studies which have explored the effect of caloric restriction on plasma proteins. As detailed in the table, previous studies have mainly used mass spectrometry. One study used SomaLogic[@Carayol2017], however this panel only included 1129 proteins. The current study utilised over fourfold more proteins, therefore providing more in depth readouts of biological processes. Findings are in concordance with previous studies[@Geyer2016; @Figarska2020; @OllerMoreno2018; @Piening2018; @Carayol2017; @Bruderer2019]. These protein changes replicate across cohorts and proteomic platforms and are more likely to be robust associations. Proteins altered with a reduction in BMI have been implicated in disease including coronary artery disease and T2D within the same cohort[@Ritchie2019]. A mediation analysis suggested that proteins mediate the risk between a T2D genetic risk score (GRS) and incidence of T2D, such as IGFBP1/2, SHBG and GHR. Looking at individual proteins, a SNP which increases levels of ApoF also increases the risk of myocardial infarction and coronary heart disease[@Liu2021], therefore this apolipoprotein could contribute to the increased risk of thrombotic events seen with a higher BMI.
 
 (ref:caption-weight-loss-protein) **Summary of current literature on the effect of weight loss on the plasma proteome**
 (ref:scaption-weight-loss-protein) Summary of current literature on the effect of weight loss on the plasma proteome
