--- a/index/08-chap8.Rmd
+++ b/index/08-chap8.Rmd
@@ -46,15 +46,23 @@ The comparison of the magnitude of estimates across studies conveys important in
 
 ## Results
 ### Comparison of BMI effects across DiRECT and INTERVAL
-BMI-protein estimates from this DiRECT were compared with effect estimates from INTERVAL (Chapter \@ref(BMI-protein-MR)), where 2803 proteins were detected across both studies. Both cohorts, through use of different study designs, provided evidence for an effect of BMI on the plasma proteome. Figure \@ref(fig:DiRECT-INTERVAL) shows the BMI-protein estimates for the proteins which were included in both DiRECT and INTERVAL (R^2^=0.11, P=1.0x10^77^). 
+The proteins with causal evidence in the MR analysis from Chapter \@ref(BMI-protein-MR) were explored in the RCT results. Out of the eight unique proteins in INTERVAL, five of them were in the DiRECT SomaLogic panel. These were fumarylacetoacetase (FAH), Inhibin beta C chain (INHBC), Complement C5, SHBG and PILR. Three of these displayed consistent estimates across studies, whereas Complement C5 and PILR were not associated with BMI change in DiRECT (Figure \@ref(fig:DiRECT-INTERVAL-signif)).
 
-The protein effects were either deemed as similar, different or extreme (similar with large estimate) based on the comparison of scaled estimates. There was evidence that 1665 proteins had a similar effect across studies, 968 were different and 170 were extreme. There was consistent evidence across both studies that higher BMI leads to higher levels of various proteins including fumarylacetoacetase (FAAA), alcohol dehydrogenase 4 (ADH4), growth hormone receptor (GHR) and carboxypeptidase M (CBPM). Furthermore, higher BMI had a lowering effect on levels of sex hormone binding globulin (SHBG), as well as insulin-like growth factor binding protein 1/2 (IGFBP1/2). Although some of these estimates did not pass multiple testing in INTERVAL, the concordance in estimates in terms of effect size and direction of effect suggests that this is an issue of power.
+(ref:scaption-DiRECT-INTERVAL-signif) Forest plot comparing the protein effect estimates in INTERVAL and DiRECT (where there was MR evidence for a causal effect)
+(ref:caption-DIRECT-INTERVAL-signif) **Forest plot comparing the protein effect estimates in INTERVAL and DiRECT (where there was MR evidence for a causal effect)**. Proteins presented are the only proteins out of the top eight that were detected in DiRECT.
+```{r DiRECT-INTERVAL-signif, echo = FALSE, out.width="75%", fig.cap="(ref:caption-DIRECT-INTERVAL-signif)", fig.align = "center", fig.scap= "(ref:scaption-DiRECT-INTERVAL-signif)"}
+include_graphics(path = "figure/DiRECT/INTERVAL_signif_DiRECT_forest.pdf", dpi = NA)
+```
+
+All BMI-protein estimates from DiRECT were then compared with effect estimates from INTERVAL (Chapter \@ref(BMI-protein-MR)), where 2803 proteins were detected across both studies. Both cohorts, through use of different study designs, provided evidence for an effect of BMI on the plasma proteome. Figure \@ref(fig:DiRECT-INTERVAL) shows the BMI-protein estimates for the proteins which were included in both DiRECT and INTERVAL (R^2^=0.11, P=1.0x10^77^). 
+
+The overall protein effects were either deemed as similar, different or extreme (similar with large estimate) based on the comparison of scaled estimates. There was evidence that 2119 proteins had a similar effect across studies, 478 were different and 206 were extreme. There was consistent evidence across both studies that higher BMI leads to higher levels of various proteins including fumarylacetoacetase (FAAA), INHBC, alcohol dehydrogenase 4 (ADH4), growth hormone receptor (GHR) and carboxypeptidase M (CBPM). Furthermore, higher BMI had a lowering effect on levels of sex hormone binding globulin (SHBG), as well as insulin-like growth factor binding protein 1/2 (IGFBP1/2). Although some of these estimates did not pass multiple testing in INTERVAL, the concordance in estimates in terms of effect size and direction of effect suggests that this is an issue of power.
 
 \blandscape
 (ref:scaption-DiRECT-INTERVAL) Scatter plot comparing the two stage least squares estimate for the effect of BMI change on protein change in DiRECT with the Mendelian randomisation estimate for the effect of BMI on protein levels in INTERVAL
 (ref:caption-DIRECT-INTERVAL) **Scatter plot comparing the two stage least squares estimate for the effect of BMI change on protein change in DiRECT with the Mendelian randomisation estimate for the effect of BMI on protein levels in INTERVAL.** Proteins that are similar across analyses with a large effect size in both studies (within 1 SD of each other and with an absolute scaled estimate of more than 1 SD) are coloured in green, whereas those which display similar estimates across studies with small effect size (scaled estimates were within 1 SD of each other) are shown in blue. Proteins that do not show similar effects across studies (more than 1 SD apart) are shown in pink. A linear regression line is indicated in blue. 
 ```{r DiRECT-INTERVAL, echo = FALSE, out.width="75%", fig.cap="(ref:caption-DIRECT-INTERVAL)", fig.align = "center", fig.scap= "(ref:scaption-DiRECT-INTERVAL)"}
-include_graphics(path = "figure/DiRECT/DiRECT_INTERVAL_comparison.pdf", dpi = NA)
+include_graphics(path = "figure/DiRECT/DiRECT_INTERVAL_comparison_1.5SD.pdf", dpi = NA)
 
 ```
 \elandscape
@@ -65,16 +73,16 @@ The divergence in magnitude of estimates across study designs also suggests that
 (ref:scaption-DiRECT-INTERVAL-group) Scatter plot comparing the two stage least squares estimate for the effect of BMI change on protein change in DiRECT with the Mendelian randomisation estimate for the effect of BMI on protein levels in INTERVAL, with proteins that differ across models highlighted
 (ref:caption-DIRECT-INTERVAL-group) **Scatter plot comparing the two stage least squares estimate for the effect of BMI change on protein change in DiRECT with the Mendelian randomisation estimate for the effect of BMI on protein levels in INTERVAL, with proteins that differ across models highlighted.** Proteins that are similar across analyses with a large effect size in both studies (within 1 SD of each other and with an absolute scaled estimate of more than 1 SD) are coloured in green, whereas those which display similar estimates across studies with small effect size (scaled estimates were within 1 SD of each other) are shown in blue. Proteins that do not show similar effects across studies (more than 1 SD apart) are shown in pink. A linear regression line is indicated in blue. Complement factors which group together are circled in red at the top. SCAR5 and CHAD are also indicated.
 ```{r DiRECT-INTERVAL-group, echo = FALSE, out.width="75%", fig.cap="(ref:caption-DIRECT-INTERVAL-group)", fig.align = "center", fig.scap= "(ref:scaption-DiRECT-INTERVAL-group)"}
-include_graphics(path = "figure/DiRECT/DiRECT_INTERVAL_comparison_groups.png", dpi = NA)
+include_graphics(path = "figure/DiRECT/DiRECT_INTERVAL_comparison_groups_1.5SD.png", dpi = NA)
 ```
 \elandscape
 
-Across both INTERVAL and DiRECT, 170 proteins involved in platelet GO pathways were detected. The comparison of estimates for these proteins is shown in Figure \@ref(fig:DiRECT-INTERVAL-platelet), with categorisation of whether the estimates were different, the same or extreme based on the distribution of the 170 scaled estimates from both study designs. Overall, the estimates were associated with each other (R^2^=0.19, p=1.1x10^-9^), which was a stronger association than that seen for all proteins in Figure \@ref(fig:DiRECT-INTERVAL-group). However, there were divergences in estimates for some proteins. Thirteen proteins were categorised as extreme (similar with large estimates), with 102 categorised as the same and 55 as different. Proteins which had consistent evidence across study designs, with the greatest magnitude of estimates include PAFAH, PAI-1 and Complement Factor B. PAFAH was associated with BMI in the observational analysis in INTERVAL. However, PAFAH did not pass multiple testing in the MR analysis. Despite this, the estimate was similar in magnitude to the observational estimate. PAFAH was also associated with BMI change in DiRECT in the instrumental variable analysis. The direction of the effect indicated that higher BMI is associated with a reduction in circulating PAFAH. In agreement with this, a reduction in BMI led to higher levels of PAFAH. The estimates for PAFAH were similar in Figure \@ref(fig:DiRECT-INTERVAL-platelet). The consistencies in magnitude and direction of estimates for the platelet proteins highlighted in green, in particular PAFAH, PAI-1 and complement factor B suggest that platelet proteome alterations due to variation in BMI likely has downstream effects on the platelet environment.
+Across both INTERVAL and DiRECT, 170 proteins involved in platelet GO pathways were detected. The comparison of estimates for these proteins is shown in Figure \@ref(fig:DiRECT-INTERVAL-platelet), with categorisation of whether the estimates were different, the same or extreme based on the distribution of the 170 scaled estimates from both study designs. Overall, the estimates were associated with each other (R^2^=0.19, p=1.1x10^-9^), which was a stronger association than that seen for all proteins in Figure \@ref(fig:DiRECT-INTERVAL-group). However, there were divergences in estimates for some proteins. Fourteen proteins were categorised as extreme (similar with large estimates), with 134 categorised as the same and 22 as different. Proteins which had consistent evidence across study designs, with the greatest magnitude of estimates include PAFAH, PAI-1 and Complement Factor B. PAFAH was associated with BMI in the observational analysis in INTERVAL. However, PAFAH did not pass multiple testing in the MR analysis. Despite this, the estimate was similar in magnitude to the observational estimate. PAFAH was also associated with BMI change in DiRECT in the instrumental variable analysis. The direction of the effect indicated that higher BMI is associated with a reduction in circulating PAFAH. In agreement with this, a reduction in BMI led to higher levels of PAFAH. The estimates for PAFAH were similar in Figure \@ref(fig:DiRECT-INTERVAL-platelet). The consistencies in magnitude and direction of estimates for the platelet proteins highlighted in green, in particular PAFAH, PAI-1 and complement factor B suggest that platelet proteome alterations due to variation in BMI likely has downstream effects on the platelet environment.
 
 (ref:scaption-DiRECT-INTERVAL-platelet) Scatter plot of the two stage least squares estimate in DiRECT and the Mendelian Randomisation estimates in INTERVAL highlighting proteins involved in platelet gene ontology (GO) pathways
 (ref:caption-DiRECT-INTERVAL-platelet) **Scatter plot of the two stage least squares estimate in DiRECT and the Mendelian Randomisation estimates in INTERVAL highlighting proteins involved in platelet GO pathways**. Estimates that are similar across analyses with a large effect size in both studies (within 1 SD of each other and with an absolute scaled estimate of more than 1 SD) are coloured in green, whereas those which display similar estimates across studies with small effect size (scaled estimates were within 1 SD of each other) are shown in blue. Proteins that do not show similar effects across studies (more than 1 SD apart) are shown in pink. A linear regression line is indicated in blue. A) Scatter plot of all proteins with platelet proteins coloured in purple. B) The scatter plot restricted to platelet proteins only (purple points in A). 
 ```{r DiRECT-INTERVAL-platelet, echo = FALSE, out.width="110%", fig.cap="(ref:caption-DiRECT-INTERVAL-platelet)", fig.align = "center", fig.scap= "(ref:scaption-DiRECT-INTERVAL-platelet)"}
-include_graphics(path = "figure/DiRECT/All_protein_platelet.pdf", dpi = NA)
+include_graphics(path = "figure/DiRECT/All_protein_platelet_1.5SD.pdf", dpi = NA)
 ```
 
 ## Discussion
