--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -37,7 +37,7 @@ The work presented in this thesis brought together an interdisciplinary approach
 (ref:caption-Thesis-schematic-chaps) **Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored.** Figure made using BioRender.com.
 (ref:scaption-Thesis-schematic-chaps) Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored
 ```{r Thesis-schematic-chaps, echo = FALSE, out.width = "80%", fig.cap="(ref:caption-Thesis-schematic-chaps)", fig.align = "center", fig.scap="(ref:scaption-Thesis-schematic-chaps)"}
-include_graphics(path = "figure/General_discussion/Thesis_graphic_overview_chapters.png", dpi = NA)
+include_graphics(path = "figure/General_discussion/Thesis_graphic_overview_chapters_arrows.png", dpi = NA)
 ```
 
 A summary of the main findings of the thesis is provided in Figure \@ref(fig:Thesis-schematic-results). The first sub-aim was to determine the effect of BMI on platelet traits as well as platelet function and sigalling. This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here, alterations in the platelet proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required.
@@ -48,14 +48,14 @@ A summary of the main findings of the thesis is provided in Figure \@ref(fig:The
 include_graphics(path = "figure/General_discussion/Summary_thesis.png", dpi = NA)
 ```
 
-The second sub-aim was to characterise the effects of the chemokines macrophage-derived chemokine (MDC) and thymus and activation regulated chemokine (TARC) on platelet function. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised as a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and PE. 
+The second sub-aim was to characterise the effects of the chemokines macrophage-derived chemokine (MDC) and thymus and activation regulated chemokine (TARC) on platelet function. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised as a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and pulmonary embolism (PE). 
 
 As proteins that circulate in the blood have the ability to modulate platelet function, the final aim of the thesis was more hypothesis-free in nature: to determine the effects of adiposity on the plasma proteome, in particular proteins which may relate to platelet function. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. Chapter \@ref(Comparison-proteome) brought together these study designs to identify consistent evidence for BMI effects on proteins. These analyses pointed towards proteins which may be important in obesity-related CVD such as SHBG, fumarylacetoacetase and IGFBP1/2. Specific analysis of the effect of BMI on proteins involved in platelet GO pathways also implicated proteins such as PAFAH which is altered by BMI and may lead to platelet hyperactivity. 
 
 ## Wider implications of findings
 The research within this thesis has contributed to the understanding of mechanisms of obesity-related CVD. As well as providing evidence for a role of body mass index in the production of immature platelets, the research surrounding IPC has wider implications. As mentioned in Chapter \@ref(BMI-platelets-INTERVAL), the standard full blood count used by the NHS does not include IPC.  Similarly, more detailed blood counts from newer haematology analyzers also do not provide IPC within the summary, however it can be derived from IPF and PLT. The finding that IPC associates with whole blood platelet aggregation is important as it not only suggests that IPC should be considered in patients with obesity, but it could also be a useful biomarker of platelet hyperactivity across the population. Studies have indicated that there is a positive correlation between IPC and ADP-induced platelet aggregation in patients receiving either prasugrel or ticagrelor, therefore IPC could be used to predict which patients would be more responsive to antiplatelet treatment[@Bernlochner2015a].
 
-As well as IPC having the potential to be a useful biomarker, the targeted approach in Chapter \@ref(chemokine-platelets), exploring the effect of the two chemokines MDC and TARC on platelet function, indicated that these chemokines could be biomarkers of platelet hyperactivity. Higher levels of MDC were also implicated in VTE through using a two sample MR framework, therefore measuring circulating levels of MDC may also indicate those at increased risk of DVT.  
+As well as IPC having the potential to be a useful readout of platelet hyperactivity, the targeted approach in Chapter \@ref(chemokine-platelets), exploring the effect of the two chemokines MDC and TARC on platelet function, indicated that these chemokines relate to platelet hyperactivity. Higher levels of MDC were also implicated in VTE through using a two sample MR framework, therefore measuring circulating levels of MDC could indicate those at increased risk of DVT, however these needs further exploration such as through colocalization analyses.
 
 The BMI and proteome analyses suggested that various plasma proteins could also be biomarkers in patients with obesity who may be at a greater risk of cardiovascular events and metabolic disease. Using MR, various proteins altered by BMI as shown in Chapter \@ref(BMI-protein-MR) have been implicated in disease. For example, in work by Constantinescu et al. (unpublished), analyses suggested that certain proteins altered with BMI may have a causal role in DVT, including INHBC. Other proteins such as SHBG have been implicated in T2D. Proteins such as INHBC and SHBG could therefore be therapeutic targets. Proteins which are altered with weight loss on the plasma proteome also indicates potential proteins which may be have a role in reducing the disease risk associated with weight loss. The comparison across both studies indicates proteins which are altered with BMI in both study designs and therefore may be the most suitable targets for pharmacological intervention.
 
@@ -65,14 +65,12 @@ It is unclear how these associations fit together and whether they are truly par
 ## Strengths 
 As previously mentioned, this thesis has approached hypotheses using a range of study designs. Integrating clinical studies, basic science, cohort studies and trial data has been crucial to further understand the role of BMI in platelet function. Orthogonal evidence is when findings are replicated more than one study design. This thesis has provided orthogonal evidence such as through use of MR along with a weight loss RCT to determine effects of BMI on the plasma proteome. This is therefore a major strength of the current research. Using a combination of study designs is crucial to determine causal effects as each technique has its own set of strengths and limitations.
 
-One of the major benefits of these techniques is that they are in line with the principles of the 3Rs (replacement, reduction and refinement). The thesis has made use of available human data from various cohorts to avoid use of animals in research (replacement). Mouse models could have been used to explore the effect of obesity on platelet characteristics and platelet function. However, instead of this, a human patient study was designed and platelet data was obtained from both a healthy cohort as well as a cohort with a history of cardiovascular disease. Obtaining blood from humans over mice is preferable as 1) they are able to consent, 2) obtaining large blood volumes for experiments is not lethal and 3) mice have less genetic overlap with humans therefore findings may not always directly translate to humans.
+One of the benefits of these techniques is that they are in line with the principles of the 3Rs (replacement, reduction and refinement). Instead of developing an animal study, I have created a patient study and have also found data sets which have the required variables to address my hypotheses (replacement). It is often the case that animal studies may be developed when researchers are not aware of human data sets. Some of the advantages of using human data sets for this research is that humans are able to consent and able to donate large blood volumes, without it being lethal. However, it is important to note that animal studies have their advantages. Analyses using human data sets are often limited by confounding factors such as lifestyle choices (such as smoking, drinking, eating habits). Within an animal experiment such as exploring the effect of obesity on platelet function in mice, there is the ability to give a normal diet to half of the mice, while providing the other half with a high fat diet. This can be done while keeping other environmental factors the same. These experiments can therefore help determine causality.
 
 ## Limitations
 The limitations in this section are ordered by results chapter.
 
 Although efforts were made to examine all of the associations within the pathway in Figure \@ref(fig:Thesis-schematic-chaps), this was only possible where there was available data or where it was possible to address hypotheses with specifically designed clinical or basic science experiments. Certain analyses were therefore limited by a lack of data. For example, it would have been beneficial to have platelet function measured within the INTERVAL cohort as this would have made it possible to do a one sample MR for BMI to platelet function, and the plasma proteome findings could have been directly compared to platelet function. Although platelet function data is not available on this scale, cohorts such as the Framingham Heart Study (FHS) have platelet function data for ~3,000 participants[@Rodriguez2020]. As they also have genetic data, it would be beneficial to perform a one sample MR for BMI to platelet function. The association between IPC and platelet function would benefit from being replicated in a larger cohort who are free from major disease such as the FHS, however this study does not have IPC measured.
-
-As mentioned in Chapter \@ref(BMI-platelets-clinic), a major limitation of the study is the lack of longitudinal data for the bariatric surgery and platelet function study. Before the COVID-19 pandemic, the experimental plan was to have bariatric patients with BMI > 40 kg/m^2^ and controls followed up at four time points. These time points were: baseline (2-3 weeks before surgery), after the very low energy diet (VLED) that precedes bariatric surgery (day of surgery), 6 weeks post-surgery and 12 months post-surgery. This would have allowed exploration of the change in an individual's platelet function with weight loss. Previous studies have researched the effect of obesity and bariatric surgery on platelet function[@Barrachina2019; @Dobrydneva2012], but platelet function at four timepoints surrounding bariatric surgery has not yet been explored, more specifically before and after the VLED. This study aimed to add in a time point at 12 months, which is where there is evidence for maximal weight loss[@Maciejewski2016]. Therefore this study would have been one of the most in depth platelet function studies for bariatric surgery. Although now not achievable within this PhD project, this study will be able to be taken forward by the Hers lab.
 
 Another limitation to analyses and platelet function studies presented in the thesis is that there was no stratification by sex in analyses and lab experiments. Where possible, analyses were adjusted for sex and therefore should help to reduce the confounding effect from this variable, however there may be a need to explore whether there are any sex specific effects. It has been shown that there may be a difference in the effect of adiposity on circulating metabolites when comparing males and females, with higher BMI having a larger effect on LDL-C in males[@OKeeffe2022]. It is likely that BMI may have different effects on the plasma proteome in males and females, especially as there are proteins in the panel which have known involvement in sex hormone regulation such as SHBG. Previous studies have identified sex differences in inflammatory protein changes in individuals with and without metabolic syndrome, for example adiponectin[@TerHorst2020]. A difference in platelet reactivity between males and females has also been reported, where aggregation in response to a range of platelet agonists was is greater in females[@Becker2006]. Similarly, sex differences have been reported in a cohort with myocardial ischaemia in flow cytometry experiments. Here, females displayed higher levels of fibrinogen binding and P-selectin expression compared to males in response to PAR1-AP and CRP[@Waissi2020]. Despite this observation, other studies have reported no difference in aggregation in response to agonists such as epinephrine and collagen[@Friede2020]. Similarly, it has been observed within the Hers lab that females may have platelets which are more susceptible to the priming effects by chemokines and other priming molecules. Future analyses would benefit from stratifying analyses by sex to further investigate any sex-specific effects, however larger sample sizes would be required.
  
