--- a/index/index.Rmd
+++ b/index/index.Rmd
@@ -41,8 +41,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-
-```{r thesis-setup, include = FALSE}
+```{r thesis-setup, include = FALSE, message=FALSE, warning=FALSE}
 # you need these packages
 if(!require(devtools))
   install.packages("devtools", repos = "http://cran.rstudio.com")
